@@ -1,21 +1,20 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ide.startup;
 
 import com.intellij.openapi.application.PathManager;
-import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.util.io.FileUtilRt;
-import com.intellij.util.io.ZipUtil;
+import com.intellij.openapi.util.io.NioFiles;
+import com.intellij.util.io.Decompressor;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.*;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.function.Predicate;
 
 public final class StartupActionScriptManager {
   public static final String STARTUP_WIZARD_MODE = "StartupWizardMode";
@@ -23,26 +22,28 @@ public final class StartupActionScriptManager {
 
   private StartupActionScriptManager() { }
 
+  @ApiStatus.Internal
   public static synchronized void executeActionScript() throws IOException {
+    Path scriptFile = getActionScriptFile();
+    List<ActionCommand> commands = null;
     try {
-      List<ActionCommand> commands = loadActionScript(getActionScriptFile());
+      commands = loadActionScript(scriptFile);
       for (ActionCommand command : commands) {
         command.execute();
       }
     }
     finally {
-      saveActionScript(null);  // deleting a file should not cause an exception
+      // deleting a file should not cause an exception
+      if (commands == null /* error occurred on load */ || !commands.isEmpty() /* not empty list means that there is some data */) {
+        Files.deleteIfExists(scriptFile);
+      }
     }
   }
 
-  public static synchronized void executeActionScript(@NotNull File scriptFile, @NotNull File oldTarget, @NotNull File newTarget) throws IOException {
-    List<ActionCommand> commands = loadActionScript(scriptFile.toPath());
-    executeActionScriptCommands(commands, oldTarget, newTarget);
-  }
-
-  public static void executeActionScriptCommands(List<ActionCommand> commands,
-                                                 @NotNull File oldTarget,
-                                                 @NotNull File newTarget) throws IOException {
+  @ApiStatus.Internal
+  public static void executeActionScriptCommands(@NotNull List<? extends ActionCommand> commands,
+                                                 @NotNull Path oldTarget,
+                                                 @NotNull Path newTarget) throws IOException {
     for (ActionCommand command : commands) {
       ActionCommand toExecute = mapPaths(command, oldTarget, newTarget);
       if (toExecute != null) {
@@ -51,92 +52,97 @@ public final class StartupActionScriptManager {
     }
   }
 
-  public static synchronized void addActionCommand(ActionCommand command) throws IOException {
-    addActionCommands(Collections.singletonList(command));
+  public static synchronized void addActionCommand(@NotNull ActionCommand command) throws IOException {
+    addActionCommands(List.of(command));
   }
 
-  public static synchronized void addActionCommands(List<? extends ActionCommand> commands) throws IOException {
+  public static synchronized void addActionCommands(@NotNull List<? extends ActionCommand> commands) throws IOException {
     if (Boolean.getBoolean(STARTUP_WIZARD_MODE)) {
       for (ActionCommand command : commands) {
         command.execute();
       }
     }
     else {
-      List<ActionCommand> script;
+      Path scriptFile = getActionScriptFile();
+      List<ActionCommand> savedScript = loadActionScript(scriptFile);
+      List<ActionCommand> script = new ArrayList<>(savedScript.size() + commands.size());
+      script.addAll(savedScript);
+      script.addAll(commands);
       try {
-        script = loadActionScript(getActionScriptFile());
-        script.addAll(commands);
+        saveActionScript(script, scriptFile);
       }
-      catch (ObjectStreamException e) {
-        Logger.getInstance(StartupActionScriptManager.class).warn(e);
-        script = new ArrayList<>(commands);
+      catch (Throwable t) {
+        try {
+          saveActionScript(savedScript, scriptFile);
+        }
+        catch (Throwable tt) { t.addSuppressed(tt); }
+        throw t;
       }
-
-      saveActionScript(script);
     }
   }
 
-  @NotNull
   private static Path getActionScriptFile() {
-    return Paths.get(PathManager.getPluginTempPath(), ACTION_SCRIPT_FILE);
+    return Path.of(PathManager.getPluginTempPath(), ACTION_SCRIPT_FILE);
   }
 
-  @NotNull
-  public static List<ActionCommand> loadActionScript(@NotNull Path scriptFile) throws IOException {
-    if (!Files.isRegularFile(scriptFile)) {
-      return new ArrayList<>();
-    }
-
-    try (ObjectInputStream ois = new ObjectInputStream(Files.newInputStream(scriptFile))) {
-      Object data = ois.readObject();
-      if (data instanceof ActionCommand[]) {
-        return new ArrayList<>(Arrays.asList((ActionCommand[])data));
+  @ApiStatus.Internal
+  public static @NotNull List<ActionCommand> loadActionScript(@NotNull Path scriptFile) throws IOException {
+    try (InputStream inputStream = Files.newInputStream(scriptFile)) {
+      // don't load ObjectInputStream if file doesn't exist
+      Object data;
+      try (ObjectInputStream stream = new ObjectInputStream(inputStream)) {
+        data = stream.readObject();
       }
-      else if (data instanceof List && ((List<?>)data).size() == 0) {
-        return new ArrayList<>();
+
+      if (data instanceof ActionCommand[]) {
+        return Arrays.asList((ActionCommand[])data);
+      }
+      else if (data instanceof List && ((List<?>)data).isEmpty()) {
+        return Collections.emptyList();
       }
       else {
         throw new IOException("An unexpected object: " + data + "/" + data.getClass());
       }
+    }
+    catch (NoSuchFileException | AccessDeniedException e) {
+      return Collections.emptyList();
     }
     catch (ReflectiveOperationException e) {
       throw (StreamCorruptedException)new StreamCorruptedException("Stream error: " + scriptFile).initCause(e);
     }
   }
 
-  private static void saveActionScript(@Nullable List<ActionCommand> commands) throws IOException {
-    Path scriptFile = getActionScriptFile();
-    saveActionScript(commands, scriptFile);
-  }
-
-  public static void saveActionScript(@Nullable List<ActionCommand> commands, Path scriptFile)
-    throws IOException {
-    if (commands != null) {
-      Files.createDirectories(scriptFile.getParent());
-      try (ObjectOutputStream oos = new ObjectOutputStream(Files.newOutputStream(scriptFile))) {
-        oos.writeObject(commands.toArray(ActionCommand.EMPTY_ARRAY));
+  @ApiStatus.Internal
+  public static void saveActionScript(@NotNull List<ActionCommand> commands, @NotNull Path scriptFile) throws IOException {
+    Files.createDirectories(scriptFile.getParent());
+    try (ObjectOutput oos = new ObjectOutputStream(Files.newOutputStream(scriptFile))) {
+      oos.writeObject(commands.toArray(new ActionCommand[0]));
+    }
+    catch (Throwable t) {
+      try {
+        Files.deleteIfExists(scriptFile);
       }
-    }
-    else if (Files.exists(scriptFile)) {
-      FileUtilRt.delete(scriptFile.toFile());
+      catch (IOException e) { t.addSuppressed(e); }
+      throw t;
     }
   }
 
-  private static ActionCommand mapPaths(ActionCommand command, File oldTarget, File newTarget) {
+  private static @Nullable ActionCommand mapPaths(ActionCommand command, Path oldTarget, Path newTarget) {
     if (command instanceof CopyCommand) {
-      File destination = mapPath(((CopyCommand)command).myDestination, oldTarget, newTarget);
+      Path destination = mapPath(((CopyCommand)command).myDestination, oldTarget, newTarget);
       if (destination != null) {
-        return new CopyCommand(new File(((CopyCommand)command).mySource), destination);
+        return new CopyCommand(Paths.get(((CopyCommand)command).mySource), destination);
       }
     }
     else if (command instanceof UnzipCommand) {
-      File destination = mapPath(((UnzipCommand)command).myDestination, oldTarget, newTarget);
+      UnzipCommand unzipCommand = (UnzipCommand)command;
+      Path destination = mapPath(unzipCommand.myDestination, oldTarget, newTarget);
       if (destination != null) {
-        return new UnzipCommand(new File(((UnzipCommand)command).mySource), destination, ((UnzipCommand)command).myFilenameFilter);
+        return new UnzipCommand(Path.of(unzipCommand.mySource), destination, unzipCommand.myFilenameFilter);
       }
     }
     else if (command instanceof DeleteCommand) {
-      File source = mapPath(((DeleteCommand)command).mySource, oldTarget, newTarget);
+      Path source = mapPath(((DeleteCommand)command).mySource, oldTarget, newTarget);
       if (source != null) {
         return new DeleteCommand(source);
       }
@@ -145,31 +151,37 @@ public final class StartupActionScriptManager {
     return null;
   }
 
-  private static File mapPath(String path, File oldTarget, File newTarget) {
-    String oldTargetPath = oldTarget.getPath();
+  private static @Nullable Path mapPath(String path, Path oldTarget, Path newTarget) {
+    String oldTargetPath = oldTarget.toString();
     if (path.startsWith(oldTargetPath)) {
       if (path.length() == oldTargetPath.length()) {
         return newTarget;
       }
       if (path.charAt(oldTargetPath.length()) == File.separatorChar) {
-        return new File(newTarget, path.substring(oldTargetPath.length() + 1));
+        return newTarget.resolve(path.substring(oldTargetPath.length() + 1));
       }
     }
     return null;
   }
 
-
   public interface ActionCommand {
-    ActionCommand[] EMPTY_ARRAY = new ActionCommand[0];
     void execute() throws IOException;
   }
 
-  public static class CopyCommand implements Serializable, ActionCommand {
+  public static final class CopyCommand implements Serializable, ActionCommand {
     private static final long serialVersionUID = 201708031943L;
 
     private final String mySource;
     private final String myDestination;
 
+    public CopyCommand(@NotNull Path source, @NotNull Path destination) {
+      mySource = source.toAbsolutePath().toString();
+      myDestination = destination.toAbsolutePath().toString();
+    }
+
+    /** @deprecated Use {@link #CopyCommand(Path, Path)} */
+    @Deprecated
+    @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
     public CopyCommand(@NotNull File source, @NotNull File destination) {
       mySource = source.getAbsolutePath();
       myDestination = destination.getAbsolutePath();
@@ -177,23 +189,17 @@ public final class StartupActionScriptManager {
 
     @Override
     public void execute() throws IOException {
-      File source = new File(mySource), destination = new File(myDestination);
-
-      if (!source.isFile()) {
-        throw new IOException("Source file missing: " + source);
+      Path source = Path.of(mySource), destination = Path.of(myDestination);
+      if (!Files.isRegularFile(source)) {
+        throw new IOException("Source file missing: " + mySource);
       }
-
-      File destDir = destination.getParentFile();
-      if (!(destDir.isDirectory() || destDir.mkdirs())) {
-        throw new IOException("Cannot create a directory: " + destDir);
-      }
-
-      FileUtilRt.copy(source, destination);
+      Files.createDirectories(destination.getParent());
+      Files.copy(source, destination);
     }
 
     @Override
     public String toString() {
-      return "copy[" + mySource + "," + myDestination + "]";
+      return "copy[" + mySource + ',' + myDestination + ']';
     }
 
     public String getSource() {
@@ -201,41 +207,42 @@ public final class StartupActionScriptManager {
     }
   }
 
-  public static class UnzipCommand implements Serializable, ActionCommand {
+  public static final class UnzipCommand implements Serializable, ActionCommand {
     private static final long serialVersionUID = 201708031943L;
 
     private final String mySource;
     private final String myDestination;
-    private final FilenameFilter myFilenameFilter;
+    private final @Nullable Predicate<? super String> myFilenameFilter;
 
-    public UnzipCommand(@NotNull File source, @NotNull File destination) {
+    public UnzipCommand(@NotNull Path source, @NotNull Path destination) {
       this(source, destination, null);
     }
 
-    public UnzipCommand(@NotNull File source, @NotNull File destination, FilenameFilter filenameFilter) {
-      mySource = source.getAbsolutePath();
-      myDestination = destination.getAbsolutePath();
+    /** @deprecated Use {@link #UnzipCommand(Path, Path)} */
+    @Deprecated
+    public UnzipCommand(@NotNull File source, @NotNull File destination) {
+      this(source.toPath(), destination.toPath());
+    }
+
+    public UnzipCommand(@NotNull Path source, @NotNull Path destination, @Nullable Predicate<? super String> filenameFilter) {
+      mySource = source.toAbsolutePath().toString();
+      myDestination = destination.toAbsolutePath().toString();
       myFilenameFilter = filenameFilter;
     }
 
     @Override
     public void execute() throws IOException {
-      File source = new File(mySource), destination = new File(myDestination);
-
-      if (!source.isFile()) {
-        throw new IOException("Source file missing: " + source);
+      Path source = Path.of(mySource), destination = Path.of(myDestination);
+      if (!Files.isRegularFile(source)) {
+        throw new IOException("Source file missing: " + mySource);
       }
-
-      if (!(destination.isDirectory() || destination.mkdirs())) {
-        throw new IOException("Cannot create a directory: " + destination);
-      }
-
-      ZipUtil.extract(source, destination, myFilenameFilter);
+      Files.createDirectories(destination);
+      new Decompressor.Zip(source).filter(myFilenameFilter).extract(destination);
     }
 
     @Override
     public String toString() {
-      return "unzip[" + mySource + "," + myDestination + "]";
+      return "unzip[" + mySource + ',' + myDestination + ',' + myFilenameFilter + ']';
     }
 
     public String getSource() {
@@ -243,26 +250,29 @@ public final class StartupActionScriptManager {
     }
   }
 
-  public static class DeleteCommand implements Serializable, ActionCommand {
+  public static final class DeleteCommand implements Serializable, ActionCommand {
     private static final long serialVersionUID = 201708031943L;
 
     private final String mySource;
 
+    public DeleteCommand(@NotNull Path source) {
+      mySource = source.toAbsolutePath().toString();
+    }
+
+    /** @deprecated Use {@link #DeleteCommand(Path)} */
+    @Deprecated
     public DeleteCommand(@NotNull File source) {
       mySource = source.getAbsolutePath();
     }
 
     @Override
     public void execute() throws IOException {
-      File source = new File(mySource);
-      if (source.exists() && !FileUtilRt.delete(source)) {
-        throw new IOException("Cannot delete: " + source);
-      }
+      NioFiles.deleteRecursively(Path.of(mySource));
     }
 
     @Override
     public String toString() {
-      return "delete[" + mySource + "]";
+      return "delete[" + mySource + ']';
     }
   }
 }
