@@ -1,45 +1,54 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ide.plugins;
 
 import com.intellij.CommonBundle;
+import com.intellij.core.CoreBundle;
 import com.intellij.ide.IdeBundle;
-import com.intellij.ide.startup.StartupActionScriptManager;
+import com.intellij.ide.plugins.marketplace.MarketplacePluginDownloadService;
+import com.intellij.ide.plugins.marketplace.PluginSignatureChecker;
+import com.intellij.ide.plugins.marketplace.statistics.PluginManagerUsageCollector;
+import com.intellij.ide.plugins.marketplace.statistics.enums.InstallationSourceEnum;
 import com.intellij.ide.util.PropertiesComponent;
-import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ApplicationNamesInfo;
 import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.application.ex.ApplicationInfoEx;
 import com.intellij.openapi.diagnostic.Logger;
+import com.intellij.openapi.extensions.PluginDescriptor;
 import com.intellij.openapi.extensions.PluginId;
 import com.intellij.openapi.fileChooser.FileChooser;
 import com.intellij.openapi.fileChooser.FileChooserDescriptor;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.ProgressManager;
-import com.intellij.openapi.ui.Messages;
+import com.intellij.openapi.progress.Task;
+import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.ex.MessagesEx;
 import com.intellij.openapi.util.Comparing;
-import com.intellij.openapi.util.Ref;
+import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.io.FileUtilRt;
+import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VfsUtil;
 import com.intellij.openapi.vfs.VfsUtilCore;
 import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.util.Consumer;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.io.Decompressor;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
-import java.awt.*;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.List;
+import java.nio.file.Paths;
 import java.util.*;
+import java.util.function.BiConsumer;
+import java.util.function.Consumer;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
+
+import static com.intellij.ide.startup.StartupActionScriptManager.*;
 
 /**
  * @author stathik
@@ -54,45 +63,20 @@ public final class PluginInstaller {
 
   private PluginInstaller() { }
 
-  public static boolean prepareToInstall(List<PluginNode> pluginsToInstall,
-                                         List<? extends IdeaPluginDescriptor> customOrAllPlugins,
-                                         boolean allowInstallWithoutRestart,
-                                         PluginManagerMain.PluginEnabler pluginEnabler,
-                                         Runnable onSuccess,
-                                         @NotNull ProgressIndicator indicator) {
-    //TODO: `PluginInstallOperation` expects only `customPlugins`, but it can take `allPlugins` too
-    PluginInstallOperation operation = new PluginInstallOperation(pluginsToInstall, customOrAllPlugins, pluginEnabler, indicator);
-    operation.setAllowInstallWithoutRestart(allowInstallWithoutRestart);
-    operation.run();
-    boolean success = operation.isSuccess();
-    if (success) {
-      ApplicationManager.getApplication().invokeLater(() -> {
-        if (allowInstallWithoutRestart) {
-          for (PendingDynamicPluginInstall install : operation.getPendingDynamicPluginInstalls()) {
-            installAndLoadDynamicPlugin(install.getFile(), null, install.getPluginDescriptor());
-          }
-        }
-        if (onSuccess != null) {
-          onSuccess.run();
-        }
-      });
-    }
-    return success;
-  }
-
   /**
    * @return true if restart is needed
    */
-  public static boolean prepareToUninstall(@NotNull IdeaPluginDescriptor pluginDescriptor) throws IOException {
+  @ApiStatus.Internal
+  public static boolean prepareToUninstall(@NotNull IdeaPluginDescriptorImpl pluginDescriptor) throws IOException {
     synchronized (ourLock) {
       if (PluginManagerCore.isPluginInstalled(pluginDescriptor.getPluginId())) {
         if (pluginDescriptor.isBundled()) {
           LOG.error("Plugin is bundled: " + pluginDescriptor.getPluginId());
         }
         else {
-          boolean needRestart = !DynamicPlugins.allowLoadUnloadWithoutRestart((IdeaPluginDescriptorImpl)pluginDescriptor);
+          boolean needRestart = pluginDescriptor.isEnabled() && !DynamicPlugins.allowLoadUnloadWithoutRestart(pluginDescriptor);
           if (needRestart) {
-            uninstallAfterRestart(pluginDescriptor);
+            uninstallAfterRestart(pluginDescriptor.getPluginPath());
           }
 
           PluginStateManager.fireState(pluginDescriptor, false);
@@ -103,30 +87,38 @@ public final class PluginInstaller {
     return false;
   }
 
-  private static void uninstallAfterRestart(IdeaPluginDescriptor pluginDescriptor) throws IOException {
-    StartupActionScriptManager.addActionCommand(new StartupActionScriptManager.DeleteCommand(pluginDescriptor.getPluginPath().toFile()));
+  private static void uninstallAfterRestart(@NotNull Path pluginPath) throws IOException {
+    addActionCommand(new DeleteCommand(pluginPath));
   }
 
-  public static boolean uninstallDynamicPlugin(@Nullable JComponent parentComponent, IdeaPluginDescriptor pluginDescriptor, boolean isUpdate) {
-    DynamicPlugins.UnloadPluginOptions options = new DynamicPlugins.UnloadPluginOptions()
-      .withUpdate(isUpdate)
-      .withWaitForClassloaderUnload(true);
+  public static boolean uninstallDynamicPlugin(@Nullable JComponent parentComponent,
+                                               @NotNull IdeaPluginDescriptorImpl pluginDescriptor,
+                                               boolean isUpdate) {
+    boolean uninstalledWithoutRestart = true;
+    if (pluginDescriptor.isEnabled()) {
+      DynamicPlugins.UnloadPluginOptions options = new DynamicPlugins.UnloadPluginOptions()
+        .withUpdate(isUpdate)
+        .withWaitForClassloaderUnload(true);
 
-    boolean uninstalledWithoutRestart = parentComponent != null
-      ? DynamicPlugins.unloadPluginWithProgress(null, parentComponent, (IdeaPluginDescriptorImpl)pluginDescriptor, options)
-      : DynamicPlugins.unloadPlugin((IdeaPluginDescriptorImpl)pluginDescriptor, options);
+      uninstalledWithoutRestart = parentComponent != null ?
+                                  DynamicPlugins.unloadPluginWithProgress(null, parentComponent, pluginDescriptor, options) :
+                                  DynamicPlugins.INSTANCE.unloadPlugin(pluginDescriptor, options);
+    }
 
+    Path pluginPath = pluginDescriptor.getPluginPath();
     if (uninstalledWithoutRestart) {
       try {
-        FileUtil.delete(pluginDescriptor.getPluginPath());
+        FileUtil.delete(pluginPath);
       }
       catch (IOException e) {
-        LOG.error(e);
+        LOG.info("Failed to delete jar of dynamic plugin", e);
+        uninstalledWithoutRestart = false;
       }
     }
-    else {
+
+    if (!uninstalledWithoutRestart) {
       try {
-        uninstallAfterRestart(pluginDescriptor);
+        uninstallAfterRestart(pluginPath);
       }
       catch (IOException e) {
         LOG.error(e);
@@ -135,82 +127,76 @@ public final class PluginInstaller {
     return uninstalledWithoutRestart;
   }
 
-  /**
-   * @deprecated Use {@link #installAfterRestart(File, boolean, Path, IdeaPluginDescriptor)}
-   */
-  @Deprecated
-  public static void installAfterRestart(@NotNull File sourceFile,
-                                         boolean deleteSourceFile,
-                                         @Nullable File existingPlugin,
-                                         @NotNull IdeaPluginDescriptor descriptor) throws IOException {
-    
-  }
-
-  public static void installAfterRestart(@NotNull File sourceFile,
+  public static void installAfterRestart(@NotNull Path sourceFile,
                                          boolean deleteSourceFile,
                                          @Nullable Path existingPlugin,
                                          @NotNull IdeaPluginDescriptor descriptor) throws IOException {
-    List<StartupActionScriptManager.ActionCommand> commands = new ArrayList<>();
+    List<ActionCommand> commands = new ArrayList<>();
 
     if (existingPlugin != null) {
-      commands.add(new StartupActionScriptManager.DeleteCommand(existingPlugin.toFile()));
+      commands.add(new DeleteCommand(existingPlugin));
     }
 
-    String pluginsPath = PathManager.getPluginsPath();
-    if (sourceFile.getName().endsWith(".jar")) {
-      commands.add(new StartupActionScriptManager.CopyCommand(sourceFile, new File(pluginsPath, sourceFile.getName())));
+    Path pluginsPath = getPluginsPath();
+    if (sourceFile.getFileName().toString().endsWith(".jar")) {
+      commands.add(new CopyCommand(sourceFile, pluginsPath.resolve(sourceFile.getFileName())));
     }
     else {
-      commands.add(new StartupActionScriptManager.DeleteCommand(new File(pluginsPath, rootEntryName(sourceFile))));  // drops stale directory
-      commands.add(new StartupActionScriptManager.UnzipCommand(sourceFile, new File(pluginsPath)));
+      // drops stale directory
+      commands.add(new DeleteCommand(pluginsPath.resolve(rootEntryName(sourceFile))));
+      commands.add(new UnzipCommand(sourceFile, pluginsPath));
     }
 
     if (deleteSourceFile) {
-      commands.add(new StartupActionScriptManager.DeleteCommand(sourceFile));
+      commands.add(new DeleteCommand(sourceFile));
     }
 
-    StartupActionScriptManager.addActionCommands(commands);
+    addActionCommands(commands);
 
     PluginStateManager.fireState(descriptor, true);
   }
 
-  @Nullable
-  public static File installWithoutRestart(File sourceFile, IdeaPluginDescriptorImpl descriptor, Component parent) {
-    Ref<IOException> ref = new Ref<>();
-    Ref<File> refTarget = new Ref<>();
-    ProgressManager.getInstance().runProcessWithProgressSynchronously(() -> {
-      try {
-        refTarget.set(unpackPlugin(sourceFile, PathManager.getPluginsPath()));
-      }
-      catch (IOException e) {
-        ref.set(e);
-      }
-    }, IdeBundle.message("progress.title.installing.plugin"), false, null, parent instanceof JComponent ? (JComponent)parent : null);
-    IOException exception = ref.get();
-    if (exception != null) {
-      Messages.showErrorDialog(parent, IdeBundle.message("message.plugin.installation.failed.0", exception.getMessage()));
+  private static @Nullable Path installWithoutRestart(@NotNull Path sourceFile,
+                                                      @NotNull IdeaPluginDescriptorImpl descriptor,
+                                                      @Nullable JComponent parent) {
+    Path result;
+    try {
+      Task.WithResult<Path, IOException> task = new Task.WithResult<>(null,
+                                                                      parent,
+                                                                      IdeBundle
+                                                                        .message("progress.title.installing.plugin", descriptor.getName()),
+                                                                      false) {
+        @Override
+        protected Path compute(@NotNull ProgressIndicator indicator) throws IOException {
+          return unpackPlugin(sourceFile, getPluginsPath());
+        }
+      };
+      result = ProgressManager.getInstance().run(task);
+    }
+    catch (Throwable throwable) {
+      LOG.warn("Plugin " + descriptor + " failed to install without restart. " + throwable.getMessage(), throwable);
+      result = null;
     }
     PluginStateManager.fireState(descriptor, true);
-    return exception != null ? null : refTarget.get();
+    return result;
   }
 
-  @NotNull
-  public static File unpackPlugin(File sourceFile, String targetPath) throws IOException {
-    File target;
-    if (sourceFile.getName().endsWith(".jar")) {
-      target = new File(targetPath, sourceFile.getName());
-      FileUtilRt.copy(sourceFile, target);
+  public static @NotNull Path unpackPlugin(@NotNull Path sourceFile, @NotNull Path targetPath) throws IOException {
+    Path target;
+    if (sourceFile.getFileName().toString().endsWith(".jar")) {
+      target = targetPath.resolve(sourceFile.getFileName());
+      FileUtilRt.copy(sourceFile.toFile(), target.toFile());
     }
     else {
-      target = new File(targetPath, rootEntryName(sourceFile));
-      FileUtil.delete(target);
-      new Decompressor.Zip(sourceFile).extract(new File(targetPath));
+      target = targetPath.resolve(rootEntryName(sourceFile));
+      FileUtilRt.delete(target.toFile());
+      new Decompressor.Zip(sourceFile).extract(targetPath);
     }
     return target;
   }
 
-  private static String rootEntryName(File zip) throws IOException {
-    try (ZipFile zipFile = new ZipFile(zip)) {
+  public static String rootEntryName(@NotNull Path zip) throws IOException {
+    try (ZipFile zipFile = new ZipFile(zip.toFile())) {
       Enumeration<? extends ZipEntry> entries = zipFile.entries();
       while (entries.hasMoreElements()) {
         ZipEntry zipEntry = entries.nextElement();
@@ -230,38 +216,51 @@ public final class PluginInstaller {
     PluginStateManager.addStateListener(listener);
   }
 
-  public static boolean installFromDisk(@NotNull InstalledPluginsTableModel model,
-                                        @NotNull File file,
-                                        @NotNull Consumer<? super PluginInstallCallbackData> callback,
-                                        @Nullable Component parent) {
+  static boolean installFromDisk(@NotNull File file,
+                                 @Nullable Project project,
+                                 @Nullable JComponent parent) {
+    return installFromDisk(new InstalledPluginsTableModel(project),
+                           PluginEnabler.HEADLESS,
+                           file,
+                           parent,
+                           PluginInstaller::installPluginFromCallbackData);
+  }
+
+  static boolean installFromDisk(@NotNull InstalledPluginsTableModel model,
+                                 @NotNull PluginEnabler pluginEnabler,
+                                 @NotNull File file,
+                                 @Nullable JComponent parent,
+                                 @NotNull Consumer<? super PluginInstallCallbackData> callback) {
     try {
-      IdeaPluginDescriptorImpl pluginDescriptor = PluginDescriptorLoader.loadDescriptorFromArtifact(file.toPath(), null);
+      Path path = file.toPath();
+      IdeaPluginDescriptorImpl pluginDescriptor = PluginDescriptorLoader.loadDescriptorFromArtifact(path, null);
       if (pluginDescriptor == null) {
-        MessagesEx.showErrorDialog(parent, IdeBundle.message("dialog.message.fail.to.load.plugin.descriptor.from.file", file.getName()), CommonBundle.getErrorTitle());
+        MessagesEx.showErrorDialog(parent,
+                                   IdeBundle.message("dialog.message.fail.to.load.plugin.descriptor.from.file", file.getName()),
+                                   CommonBundle.getErrorTitle());
+        return false;
+      }
+
+      if (!PluginManagerMain.checkThirdPartyPluginsAllowed(List.of(pluginDescriptor))) {
         return false;
       }
 
       InstalledPluginsState ourState = InstalledPluginsState.getInstance();
-
       if (ourState.wasInstalled(pluginDescriptor.getPluginId())) {
         String message = IdeBundle.message("dialog.message.plugin.was.already.installed", pluginDescriptor.getName());
         MessagesEx.showWarningDialog(parent, message, IdeBundle.message("dialog.title.install.plugin"));
         return false;
       }
 
-      String incompatibleMessage = PluginManagerCore.getIncompatibleMessage(PluginManagerCore.getBuildNumber(),
-                                                                            pluginDescriptor.getSinceBuild(),
-                                                                            pluginDescriptor.getUntilBuild());
-      if (incompatibleMessage != null || PluginManagerCore.isBrokenPlugin(pluginDescriptor)) {
-        StringBuilder builder = new StringBuilder().append("Plugin '").append(pluginDescriptor.getName()).append("'");
-        if (pluginDescriptor.getVersion() != null) {
-          builder.append(" version ").append(pluginDescriptor.getVersion());
-        }
-        builder.append(" is incompatible with this installation");
-        if (incompatibleMessage != null) {
-          builder.append(": ").append(incompatibleMessage);
-        }
-        MessagesEx.showErrorDialog(parent, builder.toString(), CommonBundle.getErrorTitle());
+      PluginLoadingError error = PluginManagerCore.checkBuildNumberCompatibility(pluginDescriptor, PluginManagerCore.getBuildNumber());
+      if (error != null) {
+        MessagesEx.showErrorDialog(parent, error.getDetailedMessage(), CommonBundle.getErrorTitle());
+        return false;
+      }
+      if (PluginManagerCore.isBrokenPlugin(pluginDescriptor)) {
+        String message =
+          CoreBundle.message("plugin.loading.error.long.marked.as.broken", pluginDescriptor.getName(), pluginDescriptor.getVersion());
+        MessagesEx.showErrorDialog(parent, message, CommonBundle.getErrorTitle());
         return false;
       }
 
@@ -273,124 +272,198 @@ public final class PluginInstaller {
         return false;
       }
 
-      PluginManagerMain.PluginEnabler pluginEnabler = model instanceof PluginManagerMain.PluginEnabler
-                                                      ? (PluginManagerMain.PluginEnabler)model
-                                                      : new PluginManagerMain.PluginEnabler.HEADLESS();
-      Ref<Boolean> cancel = Ref.create(false);
-      Ref<IdeaPluginDescriptor> toDisable = new Ref<>();
-      Ref<Boolean> dependenciesRequireRestart = Ref.create(false);
-      Set<PluginInstallCallbackData> installedDependencies = new HashSet<>();
-      boolean success = ProgressManager.getInstance().runProcessWithProgressSynchronously(() -> {
-        PluginInstallOperation dependencyInstallOperation = new PluginInstallOperation(
-          Collections.emptyList(),
-          CustomPluginRepositoryService.getInstance().getCustomRepositoryPlugins(),
-          pluginEnabler,
-          ProgressManager.getInstance().getProgressIndicator());
-        dependencyInstallOperation.setAllowInstallWithoutRestart(true);
-        Ref<IdeaPluginDescriptor> ref = dependencyInstallOperation.checkDependenciesAndReplacements(pluginDescriptor, null);
-        if (ref == null) {
-          cancel.set(true);
-        }
-        else {
-          dependenciesRequireRestart.set(dependencyInstallOperation.isRestartRequired());
-          installedDependencies.addAll(dependencyInstallOperation.getInstalledDependentPlugins());
-          toDisable.set(ref.get());
-        }
-      }, IdeBundle.message("progress.title.checking.plugin.dependencies"), true, null, (JComponent) parent);
+      PluginManagerUsageCollector.pluginInstallationStarted(pluginDescriptor,
+                                                            InstallationSourceEnum.FROM_DISK,
+                                                            installedPlugin != null ? installedPlugin.getVersion() : null);
 
-      if (!success || cancel.get()) return false;
-
-      Path oldFile = null;
-      if (installedPlugin != null && !installedPlugin.isBundled()) {
-        oldFile = installedPlugin.getPluginPath();
+      if (Registry.is("marketplace.certificate.signature.check")) {
+        if (!PluginSignatureChecker.verify(pluginDescriptor, file, true)) {
+          return false;
+        }
       }
 
-      boolean installWithoutRestart = oldFile == null && DynamicPlugins.allowLoadUnloadWithoutRestart(pluginDescriptor) && !dependenciesRequireRestart.get();
-      if (!installWithoutRestart) {
-        installAfterRestart(file, false, oldFile, pluginDescriptor);
+      Task.WithResult<Pair<PluginInstallOperation, ? extends IdeaPluginDescriptor>, RuntimeException> task =
+        new Task.WithResult<>(null,
+                              parent,
+                              IdeBundle.message("progress.title.checking.plugin.dependencies"),
+                              true) {
+          @Override
+          protected @NotNull Pair<PluginInstallOperation, ? extends IdeaPluginDescriptor> compute(@NotNull ProgressIndicator indicator) {
+            PluginInstallOperation operation = new PluginInstallOperation(List.of(),
+                                                                          CustomPluginRepositoryService.getInstance()
+                                                                            .getCustomRepositoryPlugins(),
+                                                                          pluginEnabler,
+                                                                          indicator);
+            operation.setAllowInstallWithoutRestart(true);
+
+            return operation.checkMissingDependencies(pluginDescriptor, null) ?
+                   Pair.create(operation, operation.checkDependenciesAndReplacements(pluginDescriptor)) :
+                   Pair.empty();
+          }
+        };
+
+      Pair<PluginInstallOperation, ? extends IdeaPluginDescriptor> pair = ProgressManager.getInstance().run(task);
+      PluginInstallOperation operation = pair.getFirst();
+      if (operation == null) {
+        return false;
       }
-      ourState.onPluginInstall(pluginDescriptor, installedPlugin != null, !installWithoutRestart);
-      if (!toDisable.isNull()) {
+
+      Path oldFile = installedPlugin != null && !installedPlugin.isBundled() ?
+                     installedPlugin.getPluginPath() :
+                     null;
+
+      boolean isRestartRequired = oldFile != null ||
+                                  !DynamicPlugins.allowLoadUnloadWithoutRestart(pluginDescriptor) ||
+                                  operation.isRestartRequired();
+      if (isRestartRequired) {
+        installAfterRestart(path, false, oldFile, pluginDescriptor);
+      }
+      ourState.onPluginInstall(pluginDescriptor, installedPlugin != null, isRestartRequired);
+
+      IdeaPluginDescriptor toDisable = pair.getSecond();
+      if (toDisable != null) {
         // TODO[yole] unload and check for restart
-        pluginEnabler.disablePlugins(Collections.singleton(toDisable.get()));
+        pluginEnabler.disablePlugins(Set.of(toDisable));
       }
 
+      Set<PluginInstallCallbackData> installedDependencies = operation.getInstalledDependentPlugins();
       List<IdeaPluginDescriptor> installedPlugins = new ArrayList<>();
       installedPlugins.add(pluginDescriptor);
       for (PluginInstallCallbackData plugin : installedDependencies) {
         installedPlugins.add(plugin.getPluginDescriptor());
       }
-      checkInstalledPluginDependencies(model, pluginDescriptor, parent, ContainerUtil.map2Set(installedPlugins, (descriptor) -> descriptor.getPluginId()));
+
+      Set<String> notInstalled = findNotInstalledPluginDependencies(pluginDescriptor.getDependencies(),
+                                                                    model,
+                                                                    ContainerUtil.map2Set(installedPlugins, PluginDescriptor::getPluginId));
+      if (!notInstalled.isEmpty()) {
+        String message = IdeBundle.message("dialog.message.plugin.depends.on.unknown.plugin",
+                                           pluginDescriptor.getName(),
+                                           notInstalled.size(),
+                                           StringUtil.join(notInstalled, ", "));
+        MessagesEx.showWarningDialog(parent, message, IdeBundle.message("dialog.title.install.plugin"));
+      }
+
       PluginManagerMain.suggestToEnableInstalledDependantPlugins(pluginEnabler, installedPlugins);
 
-      callback.consume(new PluginInstallCallbackData(file, pluginDescriptor, !installWithoutRestart));
-      for (PluginInstallCallbackData callbackData: installedDependencies) {
+      callback.accept(new PluginInstallCallbackData(path, pluginDescriptor, isRestartRequired));
+      for (PluginInstallCallbackData callbackData : installedDependencies) {
         if (!callbackData.getPluginDescriptor().getPluginId().equals(pluginDescriptor.getPluginId())) {
-          callback.consume(callbackData);
+          callback.accept(callbackData);
         }
+      }
+
+      if (path.toString().endsWith(".zip") && Registry.is("ide.plugins.keep.archive")) {
+        File tempFile = MarketplacePluginDownloadService.getPluginTempFile();
+        FileUtil.copy(file, tempFile);
+        MarketplacePluginDownloadService.renameFileToZipRoot(tempFile);
       }
       return true;
     }
     catch (IOException ex) {
       MessagesEx.showErrorDialog(parent, ex.getMessage(), CommonBundle.getErrorTitle());
+      return false;
     }
-    return false;
   }
 
-  public static boolean installAndLoadDynamicPlugin(@NotNull File file,
-                                                    @Nullable Component parent,
-                                                    IdeaPluginDescriptorImpl pluginDescriptor) {
-    File targetFile = installWithoutRestart(file, pluginDescriptor, parent);
-    if (targetFile != null) {
-      IdeaPluginDescriptorImpl targetDescriptor = PluginManager.loadDescriptor(targetFile.toPath(), PluginManagerCore.PLUGIN_XML);
-      if (targetDescriptor != null) {
-        return DynamicPlugins.loadPlugin(targetDescriptor);
+  public static boolean installAndLoadDynamicPlugin(@NotNull Path file,
+                                                    @NotNull IdeaPluginDescriptorImpl descriptor) {
+    return installAndLoadDynamicPlugin(file, null, descriptor);
+  }
+
+  /**
+   * @return true if plugin was successfully installed without restart, false if restart is required
+   */
+  public static boolean installAndLoadDynamicPlugin(@NotNull Path file,
+                                                    @Nullable JComponent parent,
+                                                    @NotNull IdeaPluginDescriptorImpl descriptor) {
+    Path targetFile = installWithoutRestart(file, descriptor, parent);
+    if (targetFile == null) {
+      return false;
+    }
+
+    IdeaPluginDescriptorImpl targetDescriptor = PluginDescriptorLoader.loadDescriptor(targetFile,
+                                                                                      DisabledPluginsState.disabledPlugins(),
+                                                                                      false,
+                                                                                      PluginXmlPathResolver.DEFAULT_PATH_RESOLVER);
+    if (targetDescriptor == null) {
+      return false;
+    }
+
+    return DynamicPlugins.INSTANCE.loadPlugin(targetDescriptor);
+  }
+
+  private static @NotNull Set<String> findNotInstalledPluginDependencies(@NotNull List<? extends IdeaPluginDependency> dependencies,
+                                                                         @NotNull InstalledPluginsTableModel model,
+                                                                         @NotNull Set<PluginId> installedDependencies) {
+    Set<String> notInstalled = new HashSet<>();
+    for (IdeaPluginDependency dependency : dependencies) {
+      if (dependency.isOptional()) continue;
+
+      PluginId pluginId = dependency.getPluginId();
+      if (installedDependencies.contains(pluginId) ||
+          model.isEnabled(pluginId) ||
+          model.isDisabled(pluginId) ||
+          PluginManagerCore.isModuleDependency(pluginId)) {
+        continue;
       }
+
+      notInstalled.add(pluginId.getIdString());
     }
-    return true;
+
+    return notInstalled;
   }
 
-  private static void checkInstalledPluginDependencies(@NotNull InstalledPluginsTableModel model,
-                                                       @NotNull IdeaPluginDescriptorImpl pluginDescriptor,
-                                                       @Nullable Component parent,
-                                                       Set<PluginId> installedDependencies) {
-    final Set<PluginId> notInstalled = new HashSet<>();
-    for (IdeaPluginDependency dep : pluginDescriptor.getDependencies()) {
-      if (dep.isOptional()) continue;
-      PluginId id = dep.getPluginId();
-      if (installedDependencies.contains(id)) continue;
-      final boolean disabled = model.isDisabled(id);
-      final boolean enabled = model.isEnabled(id);
-      if (!enabled && !disabled && !PluginManagerCore.isModuleDependency(id)) {
-        notInstalled.add(id);
+  static void chooseAndInstall(@Nullable Project project,
+                               @Nullable JComponent parent,
+                               @NotNull BiConsumer<? super File, ? super JComponent> callback) {
+    FileChooserDescriptor descriptor = new FileChooserDescriptor(false, false, true, true, false, false) {
+
+      {
+        setTitle(IdeBundle.message("chooser.title.plugin.file"));
+        setDescription(IdeBundle.message("chooser.description.jar.and.zip.archives.are.accepted"));
       }
-    }
-    if (!notInstalled.isEmpty()) {
-      String deps = StringUtil.join(notInstalled, PluginId::toString, ", ");
-      String message =
-        IdeBundle.message("dialog.message.plugin.depends.on.unknown.plugin", pluginDescriptor.getName(), notInstalled.size(), deps);
-      MessagesEx.showWarningDialog(parent, message, IdeBundle.message("dialog.title.install.plugin"));
-    }
-  }
 
-  static void chooseAndInstall(@NotNull final InstalledPluginsTableModel model,
-                               @Nullable final Component parent, @NotNull final Consumer<? super PluginInstallCallbackData> callback) {
-    final FileChooserDescriptor descriptor = new FileChooserDescriptor(false, false, true, true, false, false) {
       @Override
-      public boolean isFileSelectable(VirtualFile file) {
+      public boolean isFileSelectable(@Nullable VirtualFile file) {
+        if (file == null) {
+          return false;
+        }
+
         final String extension = file.getExtension();
         return Comparing.strEqual(extension, "jar") || Comparing.strEqual(extension, "zip");
       }
     };
-    descriptor.setTitle(IdeBundle.message("chooser.title.plugin.file"));
-    descriptor.setDescription(IdeBundle.message("chooser.description.jar.and.zip.archives.are.accepted"));
-    final String oldPath = PropertiesComponent.getInstance().getValue(PLUGINS_PRESELECTION_PATH);
-    final VirtualFile toSelect =
-      oldPath == null ? null : VfsUtil.findFileByIoFile(new File(FileUtil.toSystemDependentName(oldPath)), false);
-    FileChooser.chooseFile(descriptor, null, parent, toSelect, virtualFile -> {
+
+    String oldPath = PropertiesComponent.getInstance().getValue(PLUGINS_PRESELECTION_PATH);
+    VirtualFile toSelect = oldPath != null ?
+                           VfsUtil.findFileByIoFile(new File(FileUtilRt.toSystemDependentName(oldPath)), false) :
+                           null;
+
+    FileChooser.chooseFile(descriptor, project, parent, toSelect, virtualFile -> {
       File file = VfsUtilCore.virtualToIoFile(virtualFile);
-      PropertiesComponent.getInstance().setValue(PLUGINS_PRESELECTION_PATH, FileUtil.toSystemIndependentName(file.getParent()));
-      installFromDisk(model, file, callback, parent);
+      PropertiesComponent.getInstance().setValue(PLUGINS_PRESELECTION_PATH,
+                                                 FileUtilRt.toSystemIndependentName(file.getParent()));
+      callback.accept(file, parent);
     });
+  }
+
+  private static @NotNull Path getPluginsPath() {
+    return Paths.get(PathManager.getPluginsPath());
+  }
+
+  private static void installPluginFromCallbackData(@NotNull PluginInstallCallbackData callbackData) {
+    IdeaPluginDescriptorImpl descriptor = callbackData.getPluginDescriptor();
+    if (!callbackData.getRestartNeeded() &&
+        installAndLoadDynamicPlugin(callbackData.getFile(), descriptor)) {
+      return;
+    }
+
+    PluginManagerConfigurable.shutdownOrRestartAppAfterInstall(PluginManagerConfigurable.getUpdatesDialogTitle(),
+                                                               action -> IdeBundle.message("plugin.installed.ide.restart.required.message",
+                                                                                           descriptor.getName(),
+                                                                                           action,
+                                                                                           ApplicationNamesInfo.getInstance()
+                                                                                             .getFullProductName()));
   }
 }
