@@ -1,10 +1,13 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ide.ui.laf;
 
 import com.intellij.CommonBundle;
 import com.intellij.diagnostic.Activity;
+import com.intellij.diagnostic.ActivityCategory;
+import com.intellij.diagnostic.LoadingState;
 import com.intellij.diagnostic.StartUpMeasurer;
 import com.intellij.icons.AllIcons;
+import com.intellij.ide.HelpTooltip;
 import com.intellij.ide.IdeBundle;
 import com.intellij.ide.WelcomeWizardUtil;
 import com.intellij.ide.actions.QuickChangeLookAndFeel;
@@ -16,11 +19,12 @@ import com.intellij.ide.ui.laf.darcula.DarculaLaf;
 import com.intellij.ide.ui.laf.darcula.DarculaLookAndFeelInfo;
 import com.intellij.ide.util.PropertiesComponent;
 import com.intellij.openapi.Disposable;
+import com.intellij.openapi.actionSystem.*;
 import com.intellij.openapi.actionSystem.impl.ActionToolbarImpl;
-import com.intellij.openapi.application.ApplicationActivationListener;
 import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.openapi.application.ModalityState;
+import com.intellij.openapi.application.ex.ApplicationInfoEx;
 import com.intellij.openapi.components.PersistentStateComponent;
-import com.intellij.openapi.components.RoamingType;
 import com.intellij.openapi.components.State;
 import com.intellij.openapi.components.Storage;
 import com.intellij.openapi.diagnostic.Logger;
@@ -31,16 +35,12 @@ import com.intellij.openapi.extensions.ExtensionPointListener;
 import com.intellij.openapi.extensions.PluginDescriptor;
 import com.intellij.openapi.ui.DialogWrapper;
 import com.intellij.openapi.ui.Messages;
+import com.intellij.openapi.ui.popup.JBPopupFactory;
+import com.intellij.openapi.ui.popup.ListPopup;
 import com.intellij.openapi.ui.popup.util.PopupUtil;
-import com.intellij.openapi.util.IconLoader;
-import com.intellij.openapi.util.SystemInfo;
-import com.intellij.openapi.util.SystemInfoRt;
-import com.intellij.openapi.util.UserDataHolder;
+import com.intellij.openapi.util.*;
 import com.intellij.openapi.util.registry.Registry;
-import com.intellij.openapi.util.registry.RegistryValue;
-import com.intellij.openapi.util.registry.RegistryValueListener;
-import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.openapi.wm.IdeFrame;
+import com.intellij.openapi.util.text.Strings;
 import com.intellij.openapi.wm.impl.IdeGlassPaneImpl;
 import com.intellij.ui.*;
 import com.intellij.ui.components.DefaultLinkButtonUI;
@@ -48,12 +48,12 @@ import com.intellij.ui.popup.OurHeavyWeightPopup;
 import com.intellij.ui.scale.JBUIScale;
 import com.intellij.ui.tree.ui.DefaultTreeUI;
 import com.intellij.util.EventDispatcher;
+import com.intellij.util.FontUtil;
 import com.intellij.util.IJSwingUtilities;
-import com.intellij.util.ObjectUtils;
+import com.intellij.util.SVGLoader;
 import com.intellij.util.concurrency.SynchronizedClearableLazy;
-import com.intellij.util.containers.ContainerUtil;
-import com.intellij.util.messages.MessageBus;
 import com.intellij.util.ui.*;
+import kotlin.Lazy;
 import org.intellij.lang.annotations.JdkConstants;
 import org.jdom.Element;
 import org.jetbrains.annotations.*;
@@ -63,38 +63,30 @@ import javax.swing.plaf.FontUIResource;
 import javax.swing.plaf.UIResource;
 import javax.swing.plaf.metal.DefaultMetalTheme;
 import javax.swing.plaf.metal.MetalLookAndFeel;
-import javax.swing.text.DefaultEditorKit;
 import java.awt.*;
-import java.awt.event.InputEvent;
-import java.awt.event.KeyEvent;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
 import java.util.List;
 import java.util.*;
 import java.util.function.BooleanSupplier;
 
-import static com.intellij.util.FontUtil.enableKerning;
-
-@State(name = "LafManager", storages = @Storage(value = "laf.xml", roamingType = RoamingType.PER_OS))
+@State(name = "LafManager", storages = @Storage("laf.xml"))
 public final class LafManagerImpl extends LafManager implements PersistentStateComponent<Element>, Disposable {
   private static final Logger LOG = Logger.getInstance(LafManager.class);
 
   @NonNls private static final String ELEMENT_LAF = "laf";
   @NonNls private static final String ELEMENT_PREFERRED_LIGHT_LAF = "preferred-light-laf";
   @NonNls private static final String ELEMENT_PREFERRED_DARK_LAF = "preferred-dark-laf";
+  @NonNls private static final String ATTRIBUTE_AUTODETECT = "autodetect";
   @NonNls private static final String ATTRIBUTE_CLASS_NAME = "class-name";
   @NonNls private static final String ATTRIBUTE_THEME_NAME = "themeId";
 
   private static final String DEFAULT_LIGHT_THEME_ID = "JetBrainsLightTheme";
+  private static final String HIGH_CONTRAST_THEME_ID = "JetBrainsHighContrastTheme";
   private static final String DARCULA_EDITOR_THEME_KEY = "Darcula.SavedEditorTheme";
   private static final String DEFAULT_EDITOR_THEME_KEY = "Default.SavedEditorTheme";
 
-  @NonNls private static final String[] ourPatchableFontResources = {"Button.font", "ToggleButton.font", "RadioButton.font",
-    "CheckBox.font", "ColorChooser.font", "ComboBox.font", "Label.font", "List.font", "MenuBar.font", "MenuItem.font",
-    "MenuItem.acceleratorFont", "RadioButtonMenuItem.font", "CheckBoxMenuItem.font", "Menu.font", "PopupMenu.font", "OptionPane.font",
-    "Panel.font", "ProgressBar.font", "ScrollPane.font", "Viewport.font", "TabbedPane.font", "Table.font", "TableHeader.font",
-    "TextField.font", "FormattedTextField.font", "Spinner.font", "PasswordField.font", "TextArea.font", "TextPane.font", "EditorPane.font",
-    "TitledBorder.font", "ToolBar.font", "ToolTip.font", "Tree.font"};
+  private static final LafReference SEPARATOR = new LafReference("", null, null);
 
   @PropertyKey(resourceBundle = IdeBundle.BUNDLE)
   @NonNls private static final String[] ourFileChooserTextKeys = {"FileChooser.viewMenuLabelText", "FileChooser.newFolderActionLabelText",
@@ -103,54 +95,14 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   private final EventDispatcher<LafManagerListener> myEventDispatcher = EventDispatcher.create(LafManagerListener.class);
 
   private final SynchronizedClearableLazy<List<UIManager.LookAndFeelInfo>> myLaFs = new SynchronizedClearableLazy<>(() -> {
-    Activity activity = StartUpMeasurer.startActivity("compute LaF list");
+    Activity activity = StartUpMeasurer.startActivity("compute LaF list", ActivityCategory.DEFAULT);
     List<UIManager.LookAndFeelInfo> infos = computeLafList();
     activity.end();
     return infos;
   });
 
-  private final UIManager.LookAndFeelInfo myDefaultLightLaf = getDefaultLightTheme();
-  private final UIManager.LookAndFeelInfo myDefaultDarkLaf = new DarculaLookAndFeelInfo();
-  private final Map<Object, Object> ourDefaults = (UIDefaults)UIManager.getDefaults().clone();
-
-  private UIManager.LookAndFeelInfo myCurrentLaf;
-  private UIManager.LookAndFeelInfo myPreferredLightLaf;
-  private UIManager.LookAndFeelInfo myPreferredDarkLaf;
-
-  private final Map<LafReference, HashMap<String, Object>> myStoredDefaults = new HashMap<>();
-
-  // A constant from Mac OS X implementation. See CPlatformWindow.WINDOW_ALPHA
-  public static final String WINDOW_ALPHA = "Window.alpha";
-
-  private static final Map<String, String> ourLafClassesAliases = new HashMap<>();
-  private static final Map<String, Integer> lafNameOrder = new HashMap<>();
-
-  private final SynchronizedClearableLazy<CollectionComboBoxModel<LafReference>> myLafComboBoxModel =
-    new SynchronizedClearableLazy<>(() -> new CollectionComboBoxModel<>(getAllReferences()));
-
-  private final SynchronizedClearableLazy<CollectionComboBoxModel<LafReference>> myPreferredLightComboBoxModel =
-    new SynchronizedClearableLazy<>(() -> new CollectionComboBoxModel<>(getLightReferences()));
-
-  private final SynchronizedClearableLazy<CollectionComboBoxModel<LafReference>> myPreferredDarkComboBoxModel =
-    new SynchronizedClearableLazy<>(() -> new CollectionComboBoxModel<>(getDarkReferences()));
-
-  static {
-    ourLafClassesAliases.put("idea.dark.laf.classname", DarculaLookAndFeelInfo.CLASS_NAME);
-
-    lafNameOrder.put("IntelliJ Light", 0);
-    lafNameOrder.put("macOS Light", 1);
-    lafNameOrder.put("Windows 10 Light", 1);
-    lafNameOrder.put("Darcula", 2);
-    lafNameOrder.put("High contrast", 3);
-  }
-
-  private boolean myFirstSetup = true;
-  private boolean myUpdatingPlugin = false;
-  private final Set<String> myThemesInUpdatedPlugin = new HashSet<>();
-  private final SynchronizedClearableLazy<Boolean> autodetect = new SynchronizedClearableLazy<>(() -> Registry.is("ide.laf.autodetect"));
-
-  private static UIManager.LookAndFeelInfo getDefaultLightTheme() {
-    for(UIThemeProvider provider: UIThemeProvider.EP_NAME.getExtensionList()) {
+  private final SynchronizedClearableLazy<UIManager.LookAndFeelInfo> defaultLightLaf = new SynchronizedClearableLazy<>(() -> {
+    for (UIThemeProvider provider : UIThemeProvider.EP_NAME.getIterable()) {
       if (DEFAULT_LIGHT_THEME_ID.equals(provider.id)) {
         UITheme theme = provider.createTheme();
         if (theme != null) {
@@ -159,14 +111,88 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       }
     }
     LOG.error("Can't load " + DEFAULT_LIGHT_THEME_ID);
-    return new IntelliJLookAndFeelInfo();
+
+    String lafInfoFQN = ApplicationInfoEx.getInstanceEx().getDefaultLightLaf();
+    UIManager.LookAndFeelInfo lookAndFeelInfo = lafInfoFQN == null ? null : createLafInfo(lafInfoFQN);
+    return lookAndFeelInfo == null ? new IntelliJLookAndFeelInfo() : lookAndFeelInfo;
+  });
+
+  private final SynchronizedClearableLazy<UIManager.LookAndFeelInfo> defaultDarkLaf = new SynchronizedClearableLazy<>(() -> {
+    String lafInfoFQN = ApplicationInfoEx.getInstanceEx().getDefaultDarkLaf();
+    UIManager.LookAndFeelInfo lookAndFeelInfo = lafInfoFQN == null ? null : createLafInfo(lafInfoFQN);
+    return lookAndFeelInfo != null ? lookAndFeelInfo : new DarculaLookAndFeelInfo();
+  });
+
+  private final Map<Object, Object> ourDefaults = (UIDefaults)UIManager.getDefaults().clone();
+
+  private UIManager.LookAndFeelInfo myCurrentLaf;
+  private @Nullable UIManager.LookAndFeelInfo preferredLightLaf;
+  private @Nullable UIManager.LookAndFeelInfo preferredDarkLaf;
+
+  private final Map<LafReference, Map<String, Object>> myStoredDefaults = new HashMap<>();
+
+  // A constant from Mac OS X implementation. See CPlatformWindow.WINDOW_ALPHA
+  private static final String WINDOW_ALPHA = "Window.alpha";
+
+  private static final Map<String, String> ourLafClassesAliases = Map.of("idea.dark.laf.classname", DarculaLookAndFeelInfo.CLASS_NAME);
+  private static Map<String, Integer> lafNameOrder = Map.of(
+    "IntelliJ Light", 0,
+    "macOS Light", 1,
+    "Windows 10 Light", 1,
+    "Darcula", 2,
+    "High contrast", 3
+  );
+
+  // allowing other plugins to change the order of the LaFs (used by Rider)
+  public static @NotNull Map<String, Integer> getLafNameOrder() {
+    return lafNameOrder;
   }
 
-  @NotNull
-  private List<UIManager.LookAndFeelInfo> computeLafList() {
+  public static void setLafNameOrder(@NotNull Map<String, Integer> value) {
+    lafNameOrder = value;
+  }
+
+  private final SynchronizedClearableLazy<CollectionComboBoxModel<LafReference>> myLafComboBoxModel =
+    new SynchronizedClearableLazy<>(() -> new LafComboBoxModel());
+
+  private final Lazy<ActionToolbar> settingsToolbar = new SynchronizedClearableLazy<>(() -> {
+    DefaultActionGroup group = new DefaultActionGroup(new PreferredLafAction());
+    ActionToolbar toolbar = ActionManager.getInstance().createActionToolbar(ActionPlaces.TOOLBAR, group, true);
+    toolbar.getComponent().setOpaque(false);
+    return toolbar;
+  });
+
+  // SystemDarkThemeDetector must be created as part of LafManagerImpl initialization and not on demand because system listeners are added
+  private @Nullable SystemDarkThemeDetector lafDetector;
+
+  private boolean myFirstSetup = true;
+  private boolean myUpdatingPlugin = false;
+  private @Nullable String myThemeIdBeforePluginUpdate = null;
+  private boolean autodetect;
+
+  public UIManager.LookAndFeelInfo getDefaultLightLaf() {
+    return defaultLightLaf.getValue();
+  }
+
+  public UIManager.LookAndFeelInfo getDefaultDarkLaf() {
+    return defaultDarkLaf.getValue();
+  }
+
+  @Nullable
+  private static UIManager.LookAndFeelInfo createLafInfo(@NotNull String fqn) {
+    try {
+      Class<?> lafInfoClass = Class.forName(fqn);
+      return (UIManager.LookAndFeelInfo)lafInfoClass.getDeclaredConstructor().newInstance();
+    }
+    catch (Throwable e) {
+      return null;
+    }
+  }
+
+  private @NotNull List<UIManager.LookAndFeelInfo> computeLafList() {
     List<UIManager.LookAndFeelInfo> lafList = new ArrayList<>();
-    lafList.add(myDefaultLightLaf);
-    lafList.add(myDefaultDarkLaf);
+    lafList.add(defaultLightLaf.getValue());
+    lafList.add(defaultDarkLaf.getValue());
 
     if (!SystemInfoRt.isMac) {
       for (UIManager.LookAndFeelInfo laf : UIManager.getInstalledLookAndFeels()) {
@@ -198,7 +224,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     return lafList;
   }
 
-  private static void sortThemes(@NotNull List<UIManager.LookAndFeelInfo> list) {
+  private static void sortThemes(@NotNull List<? extends UIManager.LookAndFeelInfo> list) {
     list.sort((t1, t2) -> {
       String n1 = t1.getName();
       String n2 = t2.getName();
@@ -230,65 +256,90 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @Override
   public void initializeComponent() {
-    Registry.get("ide.laf.autodetect").addListener(new RegistryValueListener() {
-      @Override
-      public void afterValueChanged(@NotNull RegistryValue value) {
-        autodetect.drop();
-        syncLaf();
+    ApplicationManager.getApplication().invokeLater(() -> {
+      UIManager.LookAndFeelInfo currentLaf = myCurrentLaf;
+      assert currentLaf != null;
+      if (currentLaf instanceof UIThemeBasedLookAndFeelInfo) {
+        if (!((UIThemeBasedLookAndFeelInfo)currentLaf).isInitialised()) {
+          doSetLaF(currentLaf, false);
+        }
       }
-    }, this);
-
-    if (myCurrentLaf != null && !(myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo)) {
-      final UIManager.LookAndFeelInfo laf = findLaf(myCurrentLaf.getClassName());
-      if (laf != null) {
-        boolean needUninstall = StartupUiUtil.isUnderDarcula();
-        setCurrentLookAndFeel(laf); // setup default LAF or one specified by readExternal.
-        updateWizardLAF(needUninstall);
+      else {
+        UIManager.LookAndFeelInfo laf = findLaf(currentLaf.getClassName());
+        if (laf != null) {
+          boolean needUninstall = StartupUiUtil.isUnderDarcula();
+          // setup default LAF or one specified by readExternal
+          doSetLaF(laf, false);
+          updateWizardLAF(needUninstall);
+        }
       }
-    }
 
-    if (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo && !((UIThemeBasedLookAndFeelInfo)myCurrentLaf).isInitialised()) {
-      setCurrentLookAndFeel(myCurrentLaf);
-    }
+      selectComboboxModel();
+      myFirstSetup = false;
 
-    updateUI();
+      updateUI();
+      detectAndSyncLaf();
 
+      ((EditorColorsManagerImpl)EditorColorsManager.getInstance()).initScheme(myCurrentLaf);
+
+      addThemeAndDynamicPluginListeners();
+    }, ModalityState.any());
+  }
+
+  private void addThemeAndDynamicPluginListeners() {
     UIThemeProvider.EP_NAME.addExtensionPointListener(new UIThemeEPListener(), this);
-
-    MessageBus bus = ApplicationManager.getApplication().getMessageBus();
-    bus.connect(this).subscribe(DynamicPluginListener.TOPIC, new DynamicPluginListener() {
+    ApplicationManager.getApplication().getMessageBus().connect(this).subscribe(DynamicPluginListener.TOPIC, new DynamicPluginListener() {
       @Override
       public void beforePluginUnload(@NotNull IdeaPluginDescriptor pluginDescriptor, boolean isUpdate) {
         myUpdatingPlugin = isUpdate;
+        if (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo) {
+          myThemeIdBeforePluginUpdate = ((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().getId();
+        }
+        else {
+          myThemeIdBeforePluginUpdate = null;
+        }
       }
 
       @Override
       public void pluginLoaded(@NotNull IdeaPluginDescriptor pluginDescriptor) {
-        myThemesInUpdatedPlugin.clear();
-      }
-    });
-
-    bus.connect(this).subscribe(ApplicationActivationListener.TOPIC, new ApplicationActivationListener() {
-      @Override
-      public void applicationActivated(@NotNull IdeFrame ideFrame) {
-        syncLaf();
+        myUpdatingPlugin = false;
+        myThemeIdBeforePluginUpdate = null;
       }
     });
   }
 
-  private void syncLaf() {
-    SystemDarkThemeDetector detector = SystemDarkThemeDetector.getInstance();
-    if (detector.getDetectionSupported() && isAutoDetect()) {
-      boolean currentDark = myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo && ((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().isDark() ||
-                           UIUtil.isUnderDarcula();
+  private void detectAndSyncLaf() {
+    if (autodetect) {
+      SystemDarkThemeDetector lafDetector = getOrCreateLafDetector();
+      if (lafDetector.getDetectionSupported()) {
+        lafDetector.check();
+      }
+    }
+  }
 
-      detector.check(systemDark -> {
-        UIManager.LookAndFeelInfo expectedLaf = systemDark ? myPreferredDarkLaf : myPreferredLightLaf;
+  private void syncLaf(boolean systemIsDark) {
+    if (!autodetect) {
+      return;
+    }
 
-        if (currentDark != systemDark || myCurrentLaf != expectedLaf) {
-          QuickChangeLookAndFeel.switchLafAndUpdateUI(LafManager.getInstance(), expectedLaf, true);
-        }
-      });
+    boolean currentIsDark =
+      myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo && ((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().isDark() ||
+      StartupUiUtil.isUnderDarcula();
+    UIManager.LookAndFeelInfo expectedLaf;
+    if (systemIsDark) {
+      expectedLaf = preferredDarkLaf;
+      if (expectedLaf == null) {
+        expectedLaf = getDefaultDarkLaf();
+      }
+    }
+    else {
+      expectedLaf = preferredLightLaf;
+      if (expectedLaf == null) {
+        expectedLaf = getDefaultLightLaf();
+      }
+    }
+    if (currentIsDark != systemIsDark || myCurrentLaf != expectedLaf) {
+      QuickChangeLookAndFeel.switchLafAndUpdateUI(this, expectedLaf, true);
     }
   }
 
@@ -312,30 +363,39 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @Override
   public void loadState(@NotNull Element element) {
-    myCurrentLaf = loadLafState(element, ELEMENT_LAF, getDefaultLaf());
-    myPreferredLightLaf = loadLafState(element, ELEMENT_PREFERRED_LIGHT_LAF, myDefaultLightLaf);
-    myPreferredDarkLaf = loadLafState(element, ELEMENT_PREFERRED_DARK_LAF, myDefaultDarkLaf);
+    myCurrentLaf = loadLafState(element, ELEMENT_LAF);
+    if (myCurrentLaf == null) {
+      myCurrentLaf = loadDefaultLaf();
+    }
+
+    autodetect = Boolean.parseBoolean(element.getAttributeValue(ATTRIBUTE_AUTODETECT));
+    preferredLightLaf = loadLafState(element, ELEMENT_PREFERRED_LIGHT_LAF);
+    preferredDarkLaf = loadLafState(element, ELEMENT_PREFERRED_DARK_LAF);
+
+    if (autodetect) {
+      getOrCreateLafDetector();
+    }
   }
 
-  private UIManager.LookAndFeelInfo loadLafState(@NotNull Element element, @NonNls String attrName, UIManager.LookAndFeelInfo defaultValue) {
-    UIManager.LookAndFeelInfo laf = null;
+  private @Nullable UIManager.LookAndFeelInfo loadLafState(@NotNull Element element, @NotNull @NonNls String attrName) {
     Element lafElement = element.getChild(attrName);
-    if (lafElement != null) {
-      laf = findLaf(lafElement.getAttributeValue(ATTRIBUTE_CLASS_NAME), lafElement.getAttributeValue(ATTRIBUTE_THEME_NAME));
+    if (lafElement == null) {
+      return null;
     }
-
-    // If LAF is undefined (wrong class name or something else) we have set default LAF anyway.
-    if (laf == null) {
-      laf = defaultValue;
-    }
-
-    return laf;
+    return findLaf(lafElement.getAttributeValue(ATTRIBUTE_CLASS_NAME), lafElement.getAttributeValue(ATTRIBUTE_THEME_NAME));
   }
 
-  @Nullable
-  private UIManager.LookAndFeelInfo findLaf(String lafClassName, String themeId) {
+  private @Nullable UIManager.LookAndFeelInfo findLaf(@Nullable String lafClassName, @Nullable String themeId) {
+    if ("JetBrainsLightTheme".equals(themeId)) {
+      return defaultLightLaf.getValue();
+    }
+
     if (lafClassName != null && ourLafClassesAliases.containsKey(lafClassName)) {
       lafClassName = ourLafClassesAliases.get(lafClassName);
+    }
+
+    if ("com.sun.java.swing.plaf.windows.WindowsLookAndFeel".equals(lafClassName)) {
+      return defaultLightLaf.getValue();
     }
 
     if (themeId != null) {
@@ -345,28 +405,41 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
         }
       }
     }
+
+    UIManager.LookAndFeelInfo laf = null;
     if (lafClassName != null) {
-      return findLaf(lafClassName);
+      laf = findLaf(lafClassName);
     }
-    return null;
+
+    if (laf == null && ("com.intellij.laf.win10.WinIntelliJLaf".equals(lafClassName) ||
+                        "com.intellij.laf.macos.MacIntelliJLaf".equals(lafClassName))) {
+      return defaultLightLaf.getValue();
+    }
+
+    return laf;
   }
 
   @Override
   public void noStateLoaded() {
-    myCurrentLaf = getDefaultLaf();
+    myCurrentLaf = loadDefaultLaf();
+    preferredLightLaf = null;
+    preferredDarkLaf = null;
+    autodetect = false;
   }
 
   @Override
   public Element getState() {
     Element element = new Element("state");
-    getLafState(element, ELEMENT_LAF, getCurrentLookAndFeel(LafType.ALL));
+    element.setAttribute(ATTRIBUTE_AUTODETECT, Boolean.toString(autodetect));
 
-    if (myPreferredLightLaf != myDefaultLightLaf) {
-      getLafState(element, ELEMENT_PREFERRED_LIGHT_LAF, getCurrentLookAndFeel(LafType.LIGHT));
+    getLafState(element, ELEMENT_LAF, getCurrentLookAndFeel());
+
+    if (preferredLightLaf != null && preferredLightLaf != defaultLightLaf.getValue()) {
+      getLafState(element, ELEMENT_PREFERRED_LIGHT_LAF, preferredLightLaf);
     }
 
-    if (myPreferredDarkLaf != myDefaultDarkLaf) {
-      getLafState(element, ELEMENT_PREFERRED_DARK_LAF, getCurrentLookAndFeel(LafType.DARK));
+    if (preferredDarkLaf != null && preferredDarkLaf != defaultDarkLaf.getValue()) {
+      getLafState(element, ELEMENT_PREFERRED_DARK_LAF, preferredDarkLaf);
     }
 
     return element;
@@ -376,17 +449,20 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     if (laf instanceof TempUIThemeBasedLookAndFeelInfo) {
       laf = ((TempUIThemeBasedLookAndFeelInfo)laf).getPreviousLaf();
     }
-    if (laf != null) {
-      String className = laf.getClassName();
-      if (className != null) {
-        Element child = new Element(attrName);
-        child.setAttribute(ATTRIBUTE_CLASS_NAME, className);
 
-        if (laf instanceof UIThemeBasedLookAndFeelInfo) {
-          child.setAttribute(ATTRIBUTE_THEME_NAME, ((UIThemeBasedLookAndFeelInfo)laf).getTheme().getId());
-        }
-        element.addContent(child);
+    if (laf == null) {
+      return;
+    }
+
+    String className = laf.getClassName();
+    if (className != null) {
+      Element child = new Element(attrName);
+      child.setAttribute(ATTRIBUTE_CLASS_NAME, className);
+
+      if (laf instanceof UIThemeBasedLookAndFeelInfo) {
+        child.setAttribute(ATTRIBUTE_THEME_NAME, ((UIThemeBasedLookAndFeelInfo)laf).getTheme().getId());
       }
+      element.addContent(child);
     }
   }
 
@@ -396,61 +472,35 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   @Override
-  public CollectionComboBoxModel<LafReference> getLafComboBoxModel(@NotNull LafType type) {
-    switch (type) {
-      case LIGHT:
-          return myPreferredLightComboBoxModel.getValue();
-
-      case DARK:
-        return myPreferredDarkComboBoxModel.getValue();
-
-      case ALL:
-        return myLafComboBoxModel.getValue();
-
-      default:
-        throw new IllegalStateException("Unknown LafType: " + type);
-    }
+  public @NotNull CollectionComboBoxModel<LafReference> getLafComboBoxModel() {
+    return myLafComboBoxModel.getValue();
   }
 
-  private List<LafReference> getAllReferences() {
-    return ContainerUtil.map(myLaFs.getValue(), LafManagerImpl::createLafReference);
-  }
-
-  private List<LafReference> getLightReferences() {
-    return ContainerUtil.map(ContainerUtil.filter(myLaFs.getValue(), info -> {
-     if (info instanceof UIThemeBasedLookAndFeelInfo) {
-       return !((UIThemeBasedLookAndFeelInfo)info).getTheme().isDark();
-     }
-     return info.getName().equals(IntelliJLaf.NAME);
-    }), LafManagerImpl::createLafReference);
-  }
-
-  private List<LafReference> getDarkReferences() {
-    return ContainerUtil.map(ContainerUtil.filter(myLaFs.getValue(), info -> {
-      if (info instanceof UIThemeBasedLookAndFeelInfo) {
-        return ((UIThemeBasedLookAndFeelInfo)info).getTheme().isDark();
+  private @NotNull List<LafReference> getAllReferences() {
+    List<LafReference> result = new ArrayList<>();
+    boolean addSeparator = false;
+    int maxNameOrder = Collections.max(lafNameOrder.values());
+    for (UIManager.LookAndFeelInfo info : myLaFs.getValue()) {
+      if (addSeparator) {
+        result.add(SEPARATOR);
+        addSeparator = false;
       }
-      return info.getName().equals(DarculaLaf.NAME);
-    }), LafManagerImpl::createLafReference);
+      result.add(createLafReference(info));
+      if (Objects.equals(lafNameOrder.get(info.getName()), maxNameOrder)) {
+        addSeparator = true;
+      }
+    }
+
+    return result;
   }
 
   private void updateLafComboboxModel() {
     myLafComboBoxModel.drop();
-    myPreferredLightComboBoxModel.drop();
-    myPreferredDarkComboBoxModel.drop();
   }
 
   private void selectComboboxModel() {
     if (myLafComboBoxModel.isInitialized()) {
       myLafComboBoxModel.getValue().setSelectedItem(createLafReference(myCurrentLaf));
-    }
-
-    if (myPreferredLightComboBoxModel.isInitialized()) {
-      myPreferredLightComboBoxModel.getValue().setSelectedItem(createLafReference(myPreferredLightLaf));
-    }
-
-    if (myPreferredDarkComboBoxModel.isInitialized()) {
-      myPreferredDarkComboBoxModel.getValue().setSelectedItem(createLafReference(myPreferredDarkLaf));
     }
   }
 
@@ -464,90 +514,89 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   @Override
-  public UIManager.LookAndFeelInfo findLaf(LafReference reference) {
+  public UIManager.LookAndFeelInfo findLaf(@NotNull LafReference reference) {
     return findLaf(reference.getClassName(), reference.getThemeId());
   }
 
   @Override
   @Nullable
-  public UIManager.LookAndFeelInfo getCurrentLookAndFeel(@NotNull LafManager.LafType type) {
-    switch (type) {
-      case DARK:
-        return myPreferredDarkLaf;
-
-      case LIGHT:
-        return myPreferredLightLaf;
-
-      case ALL:
-        return myCurrentLaf;
-
-      default:
-        throw new IllegalStateException("Unknown LafType: " + type);
-    }
+  public UIManager.LookAndFeelInfo getCurrentLookAndFeel() {
+    return myCurrentLaf;
   }
 
   @Override
-  public LafReference getLookAndFeelReference(@NotNull LafType type) {
-    return createLafReference(getCurrentLookAndFeel(type));
+  public LafReference getLookAndFeelReference() {
+    return createLafReference(getCurrentLookAndFeel());
   }
 
   @Override
-  public void setLookAndFeelReference(@NotNull LafType type, LafReference lafReference) {
-      switch (type) {
-        case DARK:
-          myPreferredDarkLaf = findLaf(lafReference.getClassName(), lafReference.getThemeId());
-          syncLaf();
-          break;
-
-        case LIGHT:
-          myPreferredLightLaf = findLaf(lafReference.getClassName(), lafReference.getThemeId());
-          syncLaf();
-          break;
-
-        default:
-          throw new UnsupportedOperationException("Can't set look and feel reference: " + type);
-      }
+  public ListCellRenderer<LafReference> getLookAndFeelCellRenderer() {
+    return new LafCellRenderer();
   }
 
-  public UIManager.LookAndFeelInfo getDefaultLaf() {
+  @Override
+  @NotNull
+  public JComponent getSettingsToolbar() {
+    return settingsToolbar.getValue().getComponent();
+  }
+
+  private @NotNull UIManager.LookAndFeelInfo loadDefaultLaf() {
     String wizardLafName = WelcomeWizardUtil.getWizardLAF();
     if (wizardLafName != null) {
       UIManager.LookAndFeelInfo laf = findLaf(wizardLafName);
-      if (laf != null) return laf;
+      if (laf != null) {
+        return laf;
+      }
       LOG.error("Could not find wizard L&F: " + wizardLafName);
     }
 
     if (SystemInfoRt.isMac) {
-      String className = IntelliJLaf.class.getName();
+      String className = DarculaLaf.class.getName();
       UIManager.LookAndFeelInfo laf = findLaf(className);
-      if (laf != null) return laf;
+      if (laf != null) {
+        return laf;
+      }
       LOG.error("Could not find OS X L&F: " + className);
     }
 
     String appLafName = WelcomeWizardUtil.getDefaultLAF();
     if (appLafName != null) {
       UIManager.LookAndFeelInfo laf = findLaf(appLafName);
-      if (laf != null) return laf;
+      if (laf != null) {
+        return laf;
+      }
       LOG.error("Could not find app L&F: " + appLafName);
     }
 
-    String defaultLafName = IntelliJLaf.class.getName();
+    // Use HighContrast theme for IDE in Windows if HighContrast desktop mode is set.
+    if (SystemInfoRt.isWindows && Toolkit.getDefaultToolkit().getDesktopProperty("win.highContrast.on") == Boolean.TRUE) {
+      for (UIManager.LookAndFeelInfo laf : myLaFs.getValue()) {
+        if (laf instanceof UIThemeBasedLookAndFeelInfo &&
+            HIGH_CONTRAST_THEME_ID.equals(((UIThemeBasedLookAndFeelInfo)laf).getTheme().getId())) {
+          return laf;
+        }
+      }
+    }
+
+    String defaultLafName = DarculaLaf.class.getName();
     UIManager.LookAndFeelInfo laf = findLaf(defaultLafName);
-    if (laf != null) return laf;
+    if (laf != null) {
+      return laf;
+    }
+
     throw new IllegalStateException("No default L&F found: " + defaultLafName);
   }
 
-  @Nullable
-  private UIManager.LookAndFeelInfo findLaf(@NotNull String className) {
-    if (myDefaultLightLaf.getClassName().equals(className)) {
-      return myDefaultLightLaf;
+  private @Nullable UIManager.LookAndFeelInfo findLaf(@NotNull String className) {
+    if (defaultLightLaf.getValue().getClassName().equals(className)) {
+      return defaultLightLaf.getValue();
     }
-    if (myDefaultDarkLaf.getClassName().equals(className)) {
-      return myDefaultDarkLaf;
+    if (defaultDarkLaf.getValue().getClassName().equals(className)) {
+      return defaultDarkLaf.getValue();
     }
 
     for (UIManager.LookAndFeelInfo l : myLaFs.getValue()) {
-      if (!(l instanceof UIThemeBasedLookAndFeelInfo) && Objects.equals(l.getClassName(), className)) {
+      if (!(l instanceof UIThemeBasedLookAndFeelInfo) && className.equals(l.getClassName())) {
         return l;
       }
     }
@@ -559,17 +608,18 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
    */
   @Override
   public void setCurrentLookAndFeel(@NotNull UIManager.LookAndFeelInfo lookAndFeelInfo, boolean lockEditorScheme) {
-    setLookAndFeelImpl(lookAndFeelInfo, lockEditorScheme, false);
+    setLookAndFeelImpl(lookAndFeelInfo, !lockEditorScheme, true);
   }
 
   /**
    * Sets current LAF. The method doesn't update component hierarchy.
    */
-  private void setLookAndFeelImpl(@NotNull UIManager.LookAndFeelInfo lookAndFeelInfo, boolean lockEditorScheme, boolean processChangeSynchronously) {
+  private void setLookAndFeelImpl(@NotNull UIManager.LookAndFeelInfo lookAndFeelInfo,
+                                  boolean installEditorScheme,
+                                  boolean processChangeSynchronously) {
     UIManager.LookAndFeelInfo oldLaf = myCurrentLaf;
-
-    if (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo) {
-      ((UIThemeBasedLookAndFeelInfo)myCurrentLaf).dispose();
+    if (oldLaf != lookAndFeelInfo && oldLaf instanceof UIThemeBasedLookAndFeelInfo) {
+      ((UIThemeBasedLookAndFeelInfo)oldLaf).dispose();
     }
 
     if (findLaf(lookAndFeelInfo.getClassName()) == null) {
@@ -577,24 +627,49 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       return;
     }
 
-    UIManager.getDefaults().clear();
-    UIManager.getDefaults().putAll(ourDefaults);
+    if (doSetLaF(lookAndFeelInfo, installEditorScheme)) {
+      return;
+    }
 
-    // Set L&F
-    if (IdeaLookAndFeelInfo.CLASS_NAME.equals(lookAndFeelInfo.getClassName())) { // that is IDEA default LAF
+    myCurrentLaf = lookAndFeelInfo;
+    selectComboboxModel();
+
+    if (!myFirstSetup && installEditorScheme) {
+      if (processChangeSynchronously) {
+        updateEditorSchemeIfNecessary(oldLaf, true);
+      }
+      else {
+        ApplicationManager.getApplication().invokeLater(() -> updateEditorSchemeIfNecessary(oldLaf, false));
+      }
+    }
+    myFirstSetup = false;
+  }
+
+  private boolean doSetLaF(@NotNull UIManager.LookAndFeelInfo lookAndFeelInfo, boolean installEditorScheme) {
+    UIDefaults defaults = UIManager.getDefaults();
+    defaults.clear();
+    defaults.putAll(ourDefaults);
+    if (!myFirstSetup) {
+      SVGLoader.setColorPatcherForSelection(null);
+    }
+
+    // set L&F
+    // that is IDEA default LAF
+    if (IdeaLookAndFeelInfo.CLASS_NAME.equals(lookAndFeelInfo.getClassName())) {
       IdeaLaf laf = new IdeaLaf();
       MetalLookAndFeel.setCurrentTheme(new IdeaBlueMetalTheme());
       try {
         UIManager.setLookAndFeel(laf);
+        updateIconsUnderSelection(false);
       }
       catch (Exception e) {
+        LOG.error(e);
         Messages.showMessageDialog(
           IdeBundle.message("error.cannot.set.look.and.feel", lookAndFeelInfo.getName(), e.getMessage()),
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
-        LOG.error(e);
-        return;
+        return true;
       }
     }
     else if (DarculaLookAndFeelInfo.CLASS_NAME.equals(lookAndFeelInfo.getClassName())) {
@@ -602,26 +677,29 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       try {
         UIManager.setLookAndFeel(laf);
         AppUIUtil.updateForDarcula(true);
+        if (lafNameOrder.containsKey(lookAndFeelInfo.getName())) {
+          updateIconsUnderSelection(true);
+        }
       }
       catch (Exception e) {
+        LOG.error(e);
         Messages.showMessageDialog(
           IdeBundle.message("error.cannot.set.look.and.feel", lookAndFeelInfo.getName(), e.getMessage()),
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
-        LOG.error(e);
-        return;
+        return true;
       }
     }
-    else { // non default LAF
+    else {
+      // non default LAF
       try {
         LookAndFeel laf;
         if (lookAndFeelInfo instanceof PluggableLafInfo) {
           laf = ((PluggableLafInfo)lookAndFeelInfo).createLookAndFeel();
         }
         else {
-          laf = ((LookAndFeel)Class.forName(lookAndFeelInfo.getClassName()).newInstance());
-
+          laf = (LookAndFeel)Class.forName(lookAndFeelInfo.getClassName()).getConstructor().newInstance();
           if (laf instanceof MetalLookAndFeel) {
             MetalLookAndFeel.setCurrentTheme(new DefaultMetalTheme());
           }
@@ -630,59 +708,103 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
               UserDataHolder userDataHolder = (UserDataHolder)laf;
               userDataHolder.putUserData(UIUtil.LAF_WITH_THEME_KEY, Boolean.TRUE);
             }
+            if (lafNameOrder.containsKey(lookAndFeelInfo.getName()) && lookAndFeelInfo.getName().endsWith("Light")) {
+              updateIconsUnderSelection(false);
+            }
           }
         }
 
         UIManager.setLookAndFeel(laf);
       }
       catch (Exception e) {
+        LOG.error(e);
         Messages.showMessageDialog(
           IdeBundle.message("error.cannot.set.look.and.feel", lookAndFeelInfo.getName(), e.getMessage()),
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
-        LOG.error(e);
-        return;
+        return true;
       }
     }
 
     if (lookAndFeelInfo instanceof UIThemeBasedLookAndFeelInfo) {
       try {
-        ((UIThemeBasedLookAndFeelInfo)lookAndFeelInfo).installTheme(UIManager.getLookAndFeelDefaults(), lockEditorScheme);
+        UIThemeBasedLookAndFeelInfo themeInfo = (UIThemeBasedLookAndFeelInfo)lookAndFeelInfo;
+        themeInfo.installTheme(UIManager.getLookAndFeelDefaults(), !installEditorScheme);
+
+        //IntelliJ Light is the only theme which is, in fact, a LaF.
+        if (!themeInfo.getName().equals("IntelliJ Light")) {
+          defaults.put("Theme.name", themeInfo.getName());
+        }
       }
       catch (Exception e) {
+        LOG.error(e);
         Messages.showMessageDialog(
           IdeBundle.message("error.cannot.set.look.and.feel", lookAndFeelInfo.getName(), e.getMessage()),
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
-        LOG.error(e);
-        return;
+        return true;
       }
     }
 
     if (SystemInfoRt.isMac) {
       installMacOSXFonts(UIManager.getLookAndFeelDefaults());
     }
+    return false;
+  }
 
-    myCurrentLaf = ObjectUtils.chooseNotNull(lookAndFeelInfo, findLaf(lookAndFeelInfo.getClassName()));
-    selectComboboxModel();
-
-    if (!myFirstSetup) {
-      if (!lockEditorScheme) {
-        if (processChangeSynchronously) {
-          updateEditorSchemeIfNecessary(oldLaf, true);
-        }
-        else {
-          ApplicationManager.getApplication().invokeLater(() -> updateEditorSchemeIfNecessary(oldLaf, false));
-        }
-      }
+  private static void updateIconsUnderSelection(boolean darcula) {
+    Map<String, String> map = new HashMap<>();
+    if (darcula) {
+      map.put("#5e5e5e", "#5778ad");
+      map.put("#c75450", "#a95768");
+      map.put("#6e6e6e", "#afb1b3");
+      //map.put("#f26522", "#b76554"); //red
+      map.put("#f26522b3", "#bc6b43"); //red 70%
+      map.put("#f2652299", "#bc6b43"); //red 60% (same as 70%)
+      map.put("#62b54399", "#579b41"); //green 60%
+      map.put("#f98b9e99", "#ba7481"); //pink 60%
+      map.put("#f4af3d99", "#aa823f"); //yellow 60%
+      map.put("#b99bf899", "#977fca"); //purple 60%
+      map.put("#9aa7b0cc", "#97acc6"); //noun gray 80%
+      map.put("#9aa7b099", "#97acc6"); //noun gray 60% (same as 80%)
     }
-    myFirstSetup = false;
+    else {
+      map.put("#6e6e6e", "#afb1b3");
+      map.put("#db5860", "#b75e73");
+      //map.put("#f26522", "#b56a51"); //red
+      map.put("#f26522b3", "#d38369"); //red 70%
+      map.put("#f2652299", "#d38369"); //red 60% (same as 70%)
+      map.put("#40b6e099", "#5eb6d4"); //blue 60%
+      map.put("#62b54399", "#7ebe65"); //green 60%
+      map.put("#f98b9e99", "#f1a4b2"); //pink 60%
+      map.put("#f4af3d99", "#ecc27d"); //yellow 60%
+      map.put("#b99bf899", "#b49ee2"); //purple 60%
+      map.put("#9aa7b0cc", "#aebdc6"); //noun gray 80%
+      map.put("#9aa7b099", "#aebdc6"); //noun gray 60% (same as 80%)
+      map.put("#40b6e0b3", "#5eb6d4"); //blue 70%
+      map.put("#62b543b3", "#7ebe65"); //green 70%
+      map.put("#f98b9eb3", "#f1a4b2"); //pink 70%
+      map.put("#f4af3db3", "#ecc27d"); //yellow 70%
+      map.put("#b99bf8b3", "#b49ee2"); //purple 70%
+    }
+
+    Map<String, Integer> alpha = new HashMap<>(map.size());
+    map.forEach((key, value) -> alpha.put(value, 255));
+
+     SVGLoader.setColorPatcherForSelection(new SVGLoader.SvgElementColorPatcherProvider() {
+       @Override
+       public SVGLoader.@Nullable SvgElementColorPatcher forPath(@Nullable String path) {
+         return SVGLoader.newPatcher(null, map, alpha);
+       }
+     });
   }
 
   private void updateEditorSchemeIfNecessary(UIManager.LookAndFeelInfo oldLaf, boolean processChangeSynchronously) {
-    if (oldLaf instanceof TempUIThemeBasedLookAndFeelInfo || myCurrentLaf instanceof TempUIThemeBasedLookAndFeelInfo) return;
+    if (oldLaf instanceof TempUIThemeBasedLookAndFeelInfo || myCurrentLaf instanceof TempUIThemeBasedLookAndFeelInfo) {
+      return;
+    }
     if (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo) {
       if (((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().getEditorSchemeName() != null) {
         return;
@@ -690,8 +812,8 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     }
 
     boolean dark = StartupUiUtil.isUnderDarcula();
-    EditorColorsManager colorsManager = EditorColorsManager.getInstance();
-    EditorColorsScheme current = colorsManager.getGlobalScheme();
+    EditorColorsManager editorColorManager = EditorColorsManager.getInstance();
+    EditorColorsScheme current = editorColorManager.getGlobalScheme();
     boolean wasUITheme = oldLaf instanceof UIThemeBasedLookAndFeelInfo;
     if (dark != ColorUtil.isDark(current.getDefaultBackground()) || wasUITheme) {
       String targetScheme = dark ? DarculaLaf.NAME : EditorColorsScheme.DEFAULT_SCHEME_NAME;
@@ -699,29 +821,20 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       String savedEditorThemeKey = dark ? DARCULA_EDITOR_THEME_KEY : DEFAULT_EDITOR_THEME_KEY;
       String toSavedEditorThemeKey = dark ? DEFAULT_EDITOR_THEME_KEY : DARCULA_EDITOR_THEME_KEY;
       String themeName =  properties.getValue(savedEditorThemeKey);
-      if (themeName != null && colorsManager.getScheme(themeName) != null) {
+      if (themeName != null && editorColorManager.getScheme(themeName) != null) {
         targetScheme = themeName;
       }
       if (!wasUITheme) {
         properties.setValue(toSavedEditorThemeKey, current.getName(), dark ? EditorColorsScheme.DEFAULT_SCHEME_NAME : DarculaLaf.NAME);
       }
 
-      EditorColorsScheme scheme = colorsManager.getScheme(targetScheme);
+      EditorColorsScheme scheme = editorColorManager.getScheme(targetScheme);
       if (scheme != null) {
-        ((EditorColorsManagerImpl) colorsManager).setGlobalScheme(scheme, processChangeSynchronously);
+        ((EditorColorsManagerImpl)editorColorManager).setGlobalScheme(scheme, processChangeSynchronously);
       }
     }
     UISettings.getShadowInstance().fireUISettingsChanged();
     ActionToolbarImpl.updateAllToolbarsImmediately();
-  }
-
-  /**
-   * @deprecated Use {@link AppUIUtil#updateForDarcula(boolean)}
-   */
-  @Deprecated
-  @ApiStatus.ScheduledForRemoval
-  public static void updateForDarcula(boolean isDarcula) {
-    AppUIUtil.updateForDarcula(isDarcula);
   }
 
   /**
@@ -730,14 +843,13 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
    */
   @Override
   public void updateUI() {
-    final UIDefaults uiDefaults = UIManager.getLookAndFeelDefaults();
+    UIDefaults uiDefaults = UIManager.getLookAndFeelDefaults();
     uiDefaults.put("LinkButtonUI", DefaultLinkButtonUI.class.getName());
 
     fixPopupWeight();
-
     fixMenuIssues(uiDefaults);
 
-    initInputMapDefaults(uiDefaults);
+    StartupUiUtil.initInputMapDefaults(uiDefaults);
 
     uiDefaults.put("Button.defaultButtonFollowsFocus", Boolean.FALSE);
     uiDefaults.put("Balloon.error.textInsets", new JBInsets(3, 8, 3, 8).asUIResource());
@@ -751,11 +863,11 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
     patchHiDPI(uiDefaults);
 
-    fixMacOSDarkThemeDecorations();
-
     uiDefaults.put(RenderingHints.KEY_TEXT_ANTIALIASING, AntialiasingType.getKeyForCurrentScope(false));
     uiDefaults.put(RenderingHints.KEY_TEXT_LCD_CONTRAST, UIUtil.getLcdContrastValue());
-    uiDefaults.put(RenderingHints.KEY_FRACTIONALMETRICS, UISettings.getPREFERRED_FRACTIONAL_METRICS_VALUE());
+
+    uiDefaults.put(RenderingHints.KEY_FRACTIONALMETRICS,
+                   AppUIUtil.adjustFractionalMetrics(UISettings.Companion.getPreferredFractionalMetricsValue()));
 
     for (Frame frame : Frame.getFrames()) {
       updateUI(frame);
@@ -765,22 +877,12 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     myEventDispatcher.getMulticaster().lookAndFeelChanged(this);
   }
 
-  @SuppressWarnings({"MethodMayBeStatic", "UnnecessaryReturnStatement"})
-  private void fixMacOSDarkThemeDecorations() {
-    if (!SystemInfo.isMacOSMojave) return;
-
-    //if (myCurrentLaf == myDefaultDarkTheme
-    //    || (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo && ((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().isDark())) {
-    //  todo[fokin]: apply dark decorators and dark file choosers if macOS Dark theme is enabled
-    //}
-  }
-
   @NotNull
   private static FontUIResource getFont(String yosemite, int size, @JdkConstants.FontStyle int style) {
     if (SystemInfoRt.isMac) {
       // Text family should be used for relatively small sizes (<20pt), don't change to Display
       // see more about SF https://medium.com/@mach/the-secret-of-san-francisco-fonts-4b5295d9a745#.2ndr50z2v
-      Font font = enableKerning(new Font(SystemInfo.isMacOSCatalina ? ".AppleSystemUIFont" : ".SF NS Text", style, size));
+      Font font = FontUtil.enableKerning(new Font(SystemInfo.isMacOSCatalina ? ".AppleSystemUIFont" : ".SF NS Text", style, size));
       if (!StartupUiUtil.isDialogFont(font)) {
         return new FontUIResource(font);
       }
@@ -788,14 +890,15 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     return new FontUIResource(yosemite, style, size);
   }
 
-
   public static void installMacOSXFonts(UIDefaults defaults) {
+    @SuppressWarnings("SpellCheckingInspection")
     final String face = "Helvetica Neue";
-    final FontUIResource uiFont = getFont(face, 13, Font.PLAIN);
-    initFontDefaults(defaults, uiFont);
-    for (Object key : new HashSet<>(defaults.keySet())) {
-      if (!(key instanceof String)) continue;
-      if (!StringUtil.endsWithIgnoreCase(((String)key), "font")) continue;
+    // ui font
+    StartupUiUtil.initFontDefaults(defaults, getFont(face, 13, Font.PLAIN));
+    for (Object key : new ArrayList<>(defaults.keySet())) {
+      if (!(key instanceof String) || !Strings.endsWithIgnoreCase(((String)key), "font")) {
+        continue;
+      }
       Object value = defaults.get(key);
       if (value instanceof FontUIResource) {
         FontUIResource font = (FontUIResource)value;
@@ -807,8 +910,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       }
     }
 
-    FontUIResource uiFont11 = getFont(face, 11, Font.PLAIN);
-    defaults.put("TableHeader.font", uiFont11);
+    defaults.put("TableHeader.font", getFont(face, 11, Font.PLAIN));
 
     FontUIResource buttonFont = getFont("Helvetica Neue", 13, Font.PLAIN);
     defaults.put("Button.font", buttonFont);
@@ -859,23 +961,23 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     float prevScale = prevScaleVal != null ? (Float)prevScaleVal : 1f;
 
     // fix predefined row height if default system font size is not expected
-    float prevRowHeightScale = prevScaleVal != null || SystemInfo.isMac || SystemInfo.isWindows
+    float prevRowHeightScale = prevScaleVal != null || SystemInfoRt.isMac || SystemInfoRt.isWindows
                                ? prevScale
                                : JBUIScale.getFontScale(12f);
     patchRowHeight(defaults, "List.rowHeight", prevRowHeightScale);
     patchRowHeight(defaults, "Table.rowHeight", prevRowHeightScale);
     patchRowHeight(defaults, "Tree.rowHeight", prevRowHeightScale);
 
-    if (prevScale == JBUIScale.scale(1f) && prevScaleVal != null) return;
+    if (prevScale == JBUIScale.scale(1f) && prevScaleVal != null) {
+      return;
+    }
 
-    List<String> myIntKeys = Arrays.asList("Tree.leftChildIndent",
-                                           "Tree.rightChildIndent",
-                                           "SettingsTree.rowHeight");
+    Set<String> myIntKeys = Set.of("Tree.leftChildIndent", "Tree.rightChildIndent", "SettingsTree.rowHeight");
 
-    List<String> myDimensionKeys = Arrays.asList("Slider.horizontalSize",
-                                                 "Slider.verticalSize",
-                                                 "Slider.minimumHorizontalSize",
-                                                 "Slider.minimumVerticalSize");
+    Set<String> myDimensionKeys = Set.of("Slider.horizontalSize",
+                                         "Slider.verticalSize",
+                                         "Slider.minimumHorizontalSize",
+                                         "Slider.minimumVerticalSize");
 
     for (Map.Entry<Object, Object> entry : defaults.entrySet()) {
       Object value = entry.getValue();
@@ -903,13 +1005,15 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   private static void patchRowHeight(UIDefaults defaults, String key, float prevScale) {
     Object value = defaults.get(key);
     int rowHeight = value instanceof Integer ? (Integer)value : 0;
-    if (!SystemInfo.isMac && !SystemInfo.isWindows && Registry.is("linux.row.height.disabled")) {
+    if (!SystemInfoRt.isMac && !SystemInfoRt.isWindows &&
+        (!LoadingState.APP_STARTED.isOccurred() || Registry.is("linux.row.height.disabled", true))) {
       rowHeight = 0;
     }
     else if (rowHeight <= 0) {
       LOG.warn(key + " = " + value + " in " + UIManager.getLookAndFeel().getName() + "; it may lead to performance degradation");
     }
-    defaults.put(key, rowHeight <= 0 ? 0 : JBUIScale.scale((int)(rowHeight / prevScale)));
+    int custom = LoadingState.APP_STARTED.isOccurred() ? Registry.intValue("ide.override." + key, -1) : -1;
+    defaults.put(key, custom >= 0 ? custom : rowHeight <= 0 ? 0 : JBUIScale.scale((int)(rowHeight / prevScale)));
   }
 
   private static void fixMenuIssues(@NotNull UIDefaults uiDefaults) {
@@ -925,14 +1029,14 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   private static void fixPopupWeight() {
     int popupWeight = OurPopupFactory.WEIGHT_MEDIUM;
     String property = System.getProperty("idea.popup.weight");
-    if (property != null) property = StringUtil.toLowerCase(property).trim();
+    if (property != null) property = Strings.toLowerCase(property).trim();
     if (SystemInfoRt.isMac) {
       // force heavy weight popups under Leopard, otherwise they don't have shadow or any kind of border.
       popupWeight = OurPopupFactory.WEIGHT_HEAVY;
     }
     else if (property == null) {
       // use defaults if popup weight isn't specified
-      if (SystemInfo.isWindows) {
+      if (SystemInfoRt.isWindows) {
         popupWeight = OurPopupFactory.WEIGHT_HEAVY;
       }
     }
@@ -981,7 +1085,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     UISettings uiSettings = UISettings.getInstance();
     if (uiSettings.getOverrideLafFonts()) {
       storeOriginalFontDefaults(uiDefaults);
-      initFontDefaults(uiDefaults, UIUtil.getFontWithFallback(uiSettings.getFontFace(), Font.PLAIN, uiSettings.getFontSize()));
+      StartupUiUtil.initFontDefaults(uiDefaults, StartupUiUtil.getFontWithFallback(uiSettings.getFontFace(), Font.PLAIN, uiSettings.getFontSize()));
       JBUIScale.setUserScaleFactor(JBUIScale.getFontScale(uiSettings.getFontSize()));
     }
     else {
@@ -990,10 +1094,10 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   private void restoreOriginalFontDefaults(UIDefaults defaults) {
-    LafReference lf = myCurrentLaf == null ? null : getLookAndFeelReference(LafType.ALL);
-    HashMap<String, Object> lfDefaults = myStoredDefaults.get(lf);
+    LafReference lf = myCurrentLaf == null ? null : getLookAndFeelReference();
+    Map<String, Object> lfDefaults = myStoredDefaults.get(lf);
     if (lfDefaults != null) {
-      for (String resource : ourPatchableFontResources) {
+      for (String resource : StartupUiUtil.ourPatchableFontResources) {
         defaults.put(resource, lfDefaults.get(resource));
       }
     }
@@ -1001,21 +1105,20 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   private void storeOriginalFontDefaults(UIDefaults defaults) {
-    LafReference lf = myCurrentLaf == null ? null : getLookAndFeelReference(LafType.ALL);
-    HashMap<String, Object> lfDefaults = myStoredDefaults.get(lf);
+    LafReference lf = myCurrentLaf == null ? null : getLookAndFeelReference();
+    Map<String, Object> lfDefaults = myStoredDefaults.get(lf);
     if (lfDefaults == null) {
       lfDefaults = new HashMap<>();
-      for (String resource : ourPatchableFontResources) {
+      for (String resource : StartupUiUtil.ourPatchableFontResources) {
         lfDefaults.put(resource, defaults.get(resource));
       }
       myStoredDefaults.put(lf, lfDefaults);
     }
   }
 
-  private static void updateUI(Window window) {
+  private static void updateUI(@NotNull Window window) {
     IJSwingUtilities.updateComponentTreeUI(window);
-    Window[] children = window.getOwnedWindows();
-    for (Window w : children) {
+    for (Window w : window.getOwnedWindows()) {
       IJSwingUtilities.updateComponentTreeUI(w);
     }
   }
@@ -1032,8 +1135,40 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   @Override
-  public boolean isAutoDetect() {
-    return autodetect.getValue();
+  public boolean getAutodetect() {
+    return autodetect;
+  }
+
+  @Override
+  public void setAutodetect(boolean value) {
+    autodetect = value;
+    if (autodetect) {
+      detectAndSyncLaf();
+    }
+  }
+
+  @Override
+  public boolean getAutodetectSupported() {
+    return getOrCreateLafDetector().getDetectionSupported();
+  }
+
+  private @NotNull SystemDarkThemeDetector getOrCreateLafDetector() {
+    SystemDarkThemeDetector result = lafDetector;
+    if (result == null) {
+      result = SystemDarkThemeDetector.createDetector(this::syncLaf);
+      lafDetector = result;
+    }
+    return result;
+  }
+
+  @Override
+  public void setPreferredDarkLaf(UIManager.@NotNull LookAndFeelInfo value) {
+    preferredDarkLaf = value;
+  }
+
+  @Override
+  public void setPreferredLightLaf(UIManager.@NotNull LookAndFeelInfo value) {
+    preferredLightLaf = value;
   }
 
   private static void repaintUI(Window window) {
@@ -1047,66 +1182,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     }
   }
 
-  private static void installCutCopyPasteShortcuts(InputMap inputMap, boolean useSimpleActionKeys) {
-    String copyActionKey = useSimpleActionKeys ? "copy" : DefaultEditorKit.copyAction;
-    String pasteActionKey = useSimpleActionKeys ? "paste" : DefaultEditorKit.pasteAction;
-    String cutActionKey = useSimpleActionKeys ? "cut" : DefaultEditorKit.cutAction;
-    // Ctrl+Ins, Shift+Ins, Shift+Del
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), copyActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.SHIFT_MASK | InputEvent.SHIFT_DOWN_MASK), pasteActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, InputEvent.SHIFT_MASK | InputEvent.SHIFT_DOWN_MASK), cutActionKey);
-    // Ctrl+C, Ctrl+V, Ctrl+X
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_C, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), copyActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_V, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), pasteActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_X, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), DefaultEditorKit.cutAction);
-  }
-
-  public static void initInputMapDefaults(UIDefaults defaults) {
-    // Make ENTER work in JTrees
-    InputMap treeInputMap = (InputMap)defaults.get("Tree.focusInputMap");
-    if (treeInputMap != null) { // it's really possible. For example,  GTK+ doesn't have such map
-      treeInputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_ENTER, 0), "toggle");
-    }
-    // Cut/Copy/Paste in JTextAreas
-    InputMap textAreaInputMap = (InputMap)defaults.get("TextArea.focusInputMap");
-    if (textAreaInputMap != null) { // It really can be null, for example when LAF isn't properly initialized (Alloy license problem)
-      installCutCopyPasteShortcuts(textAreaInputMap, false);
-    }
-    // Cut/Copy/Paste in JTextFields
-    InputMap textFieldInputMap = (InputMap)defaults.get("TextField.focusInputMap");
-    if (textFieldInputMap != null) { // It really can be null, for example when LAF isn't properly initialized (Alloy license problem)
-      installCutCopyPasteShortcuts(textFieldInputMap, false);
-    }
-    // Cut/Copy/Paste in JPasswordField
-    InputMap passwordFieldInputMap = (InputMap)defaults.get("PasswordField.focusInputMap");
-    if (passwordFieldInputMap != null) { // It really can be null, for example when LAF isn't properly initialized (Alloy license problem)
-      installCutCopyPasteShortcuts(passwordFieldInputMap, false);
-    }
-    // Cut/Copy/Paste in JTables
-    InputMap tableInputMap = (InputMap)defaults.get("Table.ancestorInputMap");
-    if (tableInputMap != null) { // It really can be null, for example when LAF isn't properly initialized (Alloy license problem)
-      installCutCopyPasteShortcuts(tableInputMap, true);
-    }
-  }
-
-  public static void initFontDefaults(@NotNull UIDefaults defaults, @NotNull FontUIResource uiFont) {
-    defaults.put("Tree.ancestorInputMap", null);
-    FontUIResource textFont = new FontUIResource(uiFont);
-    FontUIResource monoFont = new FontUIResource("Monospaced", Font.PLAIN, uiFont.getSize());
-
-    for (String fontResource : ourPatchableFontResources) {
-      defaults.put(fontResource, uiFont);
-    }
-
-    if (!SystemInfoRt.isMac) {
-      defaults.put("PasswordField.font", monoFont);
-    }
-    defaults.put("TextArea.font", monoFont);
-    defaults.put("TextPane.font", textFont);
-    defaults.put("EditorPane.font", textFont);
-  }
-
-  private static class OurPopupFactory extends PopupFactory {
+  private static final class OurPopupFactory extends PopupFactory {
     public static final int WEIGHT_LIGHT = 0;
     public static final int WEIGHT_MEDIUM = 1;
     public static final int WEIGHT_HEAVY = 2;
@@ -1197,14 +1273,16 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   private static final class DefaultMenuArrowIcon extends MenuArrowIcon {
     private static final BooleanSupplier dark = () -> ColorUtil.isDark(UIManager.getColor("MenuItem.selectionBackground"));
+
     private DefaultMenuArrowIcon() {
-      super(AllIcons.Icons.Ide.NextStep,
-            dark.getAsBoolean() ? AllIcons.Icons.Ide.NextStepInverted : AllIcons.Icons.Ide.NextStep,
-            IconLoader.getDisabledIcon(AllIcons.Icons.Ide.NextStep));
+      super(() -> AllIcons.Icons.Ide.MenuArrow,
+            () -> dark.getAsBoolean() ? AllIcons.Icons.Ide.MenuArrowSelected : AllIcons.Icons.Ide.MenuArrow,
+            () -> IconLoader.getDisabledIcon(AllIcons.Icons.Ide.MenuArrow));
     }
   }
 
   private static LafManagerImpl ourTestInstance;
+
   @TestOnly
   public static LafManagerImpl getTestInstance() {
     if (ourTestInstance == null) {
@@ -1213,7 +1291,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     return ourTestInstance;
   }
 
-  private class UIThemeEPListener implements ExtensionPointListener<UIThemeProvider> {
+  private final class UIThemeEPListener implements ExtensionPointListener<UIThemeProvider> {
     @Override
     public void extensionAdded(@NotNull UIThemeProvider provider, @NotNull PluginDescriptor pluginDescriptor) {
       for (UIManager.LookAndFeelInfo feel : getInstalledLookAndFeels()) {
@@ -1240,9 +1318,9 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
       updateLafComboboxModel();
 
-      // When updating a theme plugin that doesn't provide the current theme, don't select any of its themes as current
-      if (!myThemesInUpdatedPlugin.contains(theme.getId())) {
-        setCurrentLookAndFeel(newTheme);
+      // when updating a theme plugin that doesn't provide the current theme, don't select any of its themes as current
+      if (!autodetect && (!myUpdatingPlugin || newTheme.getTheme().getId().equals(myThemeIdBeforePluginUpdate))) {
+        setLookAndFeelImpl(newTheme, true, false);
         JBColor.setDark(newTheme.getTheme().isDark());
         updateUI();
       }
@@ -1256,11 +1334,8 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
         if (lookAndFeel instanceof UIThemeBasedLookAndFeelInfo) {
           UITheme theme = ((UIThemeBasedLookAndFeelInfo)lookAndFeel).getTheme();
           if (theme.getId().equals(provider.id)) {
-            if (lookAndFeel == getCurrentLookAndFeel(LafType.ALL)) {
-              switchLafTo = theme.isDark() ? myDefaultDarkLaf : myDefaultLightLaf;
-            }
-            else if (myUpdatingPlugin) {
-              myThemesInUpdatedPlugin.add(theme.getId());
+            if (lookAndFeel == getCurrentLookAndFeel()) {
+              switchLafTo = theme.isDark() ? defaultDarkLaf.getValue() : defaultLightLaf.getValue();
             }
             ((EditorColorsManagerImpl) EditorColorsManager.getInstance()).handleThemeRemoved(theme);
             continue;
@@ -1272,10 +1347,155 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       updateLafComboboxModel();
 
       if (switchLafTo != null) {
-        setLookAndFeelImpl(switchLafTo, false, true);
-        JBColor.setDark(switchLafTo == myDefaultDarkLaf);
+        setLookAndFeelImpl(switchLafTo, true, true);
+        JBColor.setDark(defaultDarkLaf.isInitialized() && switchLafTo == defaultDarkLaf.getValue());
         updateUI();
       }
+    }
+  }
+
+  private static final class LafCellRenderer extends SimpleListCellRenderer<LafReference> {
+    private static final SeparatorWithText separator = new SeparatorWithText() {
+      @Override
+      protected void paintComponent(Graphics g) {
+        g.setColor(getForeground());
+
+        Rectangle bounds = new Rectangle(getWidth(), getHeight());
+        JBInsets.removeFrom(bounds, getInsets());
+
+        paintLine(g, bounds.x, bounds.y + bounds.height/2, bounds.width);
+      }
+    };
+
+    @Override
+    public Component getListCellRendererComponent(JList<? extends LafReference> list,
+                                                  LafReference value,
+                                                  int index,
+                                                  boolean isSelected,
+                                                  boolean cellHasFocus) {
+      return value == SEPARATOR ? separator : super.getListCellRendererComponent(list, value, index, isSelected, cellHasFocus);
+    }
+
+    @Override
+    public void customize(@NotNull JList<? extends LafReference> list, LafReference value, int index, boolean selected, boolean hasFocus) {
+      setText(value.toString());
+    }
+  }
+
+  private final class LafComboBoxModel extends CollectionComboBoxModel<LafReference> {
+    private LafComboBoxModel() {
+      super(getAllReferences());
+    }
+
+    @Override
+    public void setSelectedItem(@Nullable Object item) {
+      if (item != SEPARATOR) {
+        super.setSelectedItem(item);
+      }
+    }
+  }
+
+  private final class PreferredLafAction extends DefaultActionGroup {
+    private PreferredLafAction() {
+      setPopup(true);
+      getTemplatePresentation().setIcon(AllIcons.General.GearPlain);
+      getTemplatePresentation().setText(IdeBundle.message("preferred.theme.text"));
+      getTemplatePresentation().setDescription(IdeBundle.message("preferred.theme.description"));
+    }
+
+    @Override
+    public boolean isDumbAware() {
+      return true;
+    }
+
+    @Override
+    public boolean canBePerformed(@NotNull DataContext context) {
+      return true;
+    }
+
+    @Override
+    public void actionPerformed(@NotNull AnActionEvent e) {
+      ListPopup popup = JBPopupFactory.getInstance().
+        createActionGroupPopup(IdeBundle.message("preferred.theme.text"), getLafGroups(), e.getDataContext(), true, null, Integer.MAX_VALUE);
+
+      HelpTooltip.setMasterPopup(e.getInputEvent().getComponent(), popup);
+      Component component = e.getInputEvent().getComponent();
+      if (component instanceof ActionButtonComponent) {
+        popup.showUnderneathOf(component);
+      }
+      else {
+        popup.showInCenterOf(component);
+      }
+    }
+
+    private @NotNull ActionGroup getLafGroups() {
+      List<UIManager.LookAndFeelInfo> lightLafs = new ArrayList<>();
+      List<UIManager.LookAndFeelInfo> darkLafs = new ArrayList<>();
+
+      for (UIManager.LookAndFeelInfo lafInfo : myLaFs.getValue()) {
+        if (lafInfo instanceof UIThemeBasedLookAndFeelInfo && ((UIThemeBasedLookAndFeelInfo)lafInfo).getTheme().isDark() ||
+            lafInfo.getName().equals(DarculaLaf.NAME)) {
+          darkLafs.add(lafInfo);
+        }
+        else {
+          lightLafs.add(lafInfo);
+        }
+      }
+
+      DefaultActionGroup group = new DefaultActionGroup();
+      group.addAll(createThemeActions(IdeBundle.message("preferred.theme.light.header"), lightLafs, false));
+      group.addAll(createThemeActions(IdeBundle.message("preferred.theme.dark.header"), darkLafs, true));
+      return group;
+    }
+
+    private @NotNull Collection<AnAction> createThemeActions(@NotNull @NlsContexts.Separator String separatorText,
+                                                             @NotNull List<? extends UIManager.LookAndFeelInfo> lafs,
+                                                             boolean isDark) {
+      List<AnAction> result = new ArrayList<>();
+      if (!lafs.isEmpty()) {
+        result.add(Separator.create(separatorText));
+        for (UIManager.LookAndFeelInfo l : lafs) {
+          result.add(new LafToggleAction(l.getName(), l, isDark));
+        }
+      }
+      return result;
+    }
+  }
+
+  private final class LafToggleAction extends ToggleAction {
+    private final UIManager.LookAndFeelInfo lafInfo;
+    private final boolean isDark;
+
+    private LafToggleAction(@Nls String name, UIManager.LookAndFeelInfo lafInfo, boolean isDark) {
+      super(name);
+      this.lafInfo = lafInfo;
+      this.isDark = isDark;
+    }
+
+    @Override
+    public boolean isSelected(@NotNull AnActionEvent e) {
+      return isDark ? lafInfo == preferredDarkLaf : lafInfo == preferredLightLaf;
+    }
+
+    @Override
+    public void setSelected(@NotNull AnActionEvent e, boolean state) {
+      if (isDark) {
+        if (preferredDarkLaf != lafInfo) {
+          preferredDarkLaf = lafInfo;
+          detectAndSyncLaf();
+        }
+      }
+      else {
+        if (preferredLightLaf != lafInfo) {
+          preferredLightLaf = lafInfo;
+          detectAndSyncLaf();
+        }
+      }
+    }
+
+    @Override
+    public boolean isDumbAware() {
+      return true;
     }
   }
 }
