@@ -1,4 +1,4 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.vcs.changes.actions.diff;
 
 import com.intellij.diff.DiffDialogHints;
@@ -6,28 +6,29 @@ import com.intellij.diff.DiffManager;
 import com.intellij.diff.chains.DiffRequestChain;
 import com.intellij.diff.chains.DiffRequestProducerException;
 import com.intellij.diff.util.DiffUserDataKeysEx;
-import com.intellij.idea.ActionsBundle;
-import com.intellij.openapi.actionSystem.*;
-import com.intellij.openapi.application.ModalityState;
+import com.intellij.openapi.ListSelection;
+import com.intellij.openapi.actionSystem.ActionPlaces;
+import com.intellij.openapi.actionSystem.AnActionEvent;
+import com.intellij.openapi.actionSystem.AnActionExtensionProvider;
+import com.intellij.openapi.actionSystem.CommonDataKeys;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.vcs.FilePath;
 import com.intellij.openapi.vcs.changes.*;
 import com.intellij.openapi.vcs.changes.ui.ChangeDiffRequestChain;
 import com.intellij.openapi.vcs.changes.ui.ChangeDiffRequestChain.Producer;
 import com.intellij.openapi.vcs.changes.ui.ChangesListView;
-import com.intellij.openapi.ListSelection;
 import com.intellij.util.concurrency.FutureResult;
 import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.containers.JBIterable;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Stream;
+import java.util.stream.Collectors;
 
 import static com.intellij.openapi.vcs.changes.actions.diff.lst.LocalChangeListDiffTool.ALLOW_EXCLUDE_FROM_COMMIT;
-import static java.util.stream.Collectors.toList;
 
 public class ShowDiffFromLocalChangesActionProvider implements AnActionExtensionProvider {
   @Override
@@ -37,14 +38,18 @@ public class ShowDiffFromLocalChangesActionProvider implements AnActionExtension
 
   @Override
   public void update(@NotNull AnActionEvent e) {
+    updateAvailability(e);
+  }
+
+  public static void updateAvailability(@NotNull AnActionEvent e) {
     Project project = e.getData(CommonDataKeys.PROJECT);
     ChangesListView view = e.getRequiredData(ChangesListView.DATA_KEY);
 
-    Stream<Change> changes = view.getSelectedChanges();
-    Stream<FilePath> unversionedFiles = view.getSelectedUnversionedFiles();
+    JBIterable<Change> changes = view.getSelectedChanges();
+    JBIterable<FilePath> unversionedFiles = view.getSelectedUnversionedFiles();
 
     if (ActionPlaces.MAIN_MENU.equals(e.getPlace())) {
-      e.getPresentation().setEnabled(project != null && (changes.findAny().isPresent() || unversionedFiles.findAny().isPresent()));
+      e.getPresentation().setEnabled(project != null && (changes.isNotEmpty() || unversionedFiles.isNotEmpty()));
     }
     else {
       e.getPresentation().setEnabled(project != null && canShowDiff(project, changes, unversionedFiles));
@@ -52,10 +57,10 @@ public class ShowDiffFromLocalChangesActionProvider implements AnActionExtension
   }
 
   private static boolean canShowDiff(@Nullable Project project,
-                                     @NotNull Stream<? extends Change> changes,
-                                     @NotNull Stream<? extends FilePath> paths) {
-    return paths.findAny().isPresent() ||
-           changes.anyMatch(it -> ChangeDiffRequestProducer.canCreate(project, it));
+                                     @NotNull JBIterable<? extends Change> changes,
+                                     @NotNull JBIterable<? extends FilePath> paths) {
+    return paths.isNotEmpty() ||
+           changes.filter(it -> ChangeDiffRequestProducer.canCreate(project, it)).isNotEmpty();
   }
 
   @Override
@@ -64,8 +69,8 @@ public class ShowDiffFromLocalChangesActionProvider implements AnActionExtension
     ChangesListView view = e.getRequiredData(ChangesListView.DATA_KEY);
     if (ChangeListManager.getInstance(project).isFreezedWithNotification(null)) return;
 
-    List<Change> changes = view.getSelectedChanges().collect(toList());
-    List<FilePath> unversioned = view.getSelectedUnversionedFiles().collect(toList());
+    List<Change> changes = view.getSelectedChanges().toList();
+    List<FilePath> unversioned = view.getSelectedUnversionedFiles().toList();
 
     final boolean needsConversion = checkIfThereAreFakeRevisions(project, changes);
 
@@ -74,20 +79,16 @@ public class ShowDiffFromLocalChangesActionProvider implements AnActionExtension
       FutureResult<ListSelection<Producer>> resultRef = new FutureResult<>();
       // this trick is essential since we are under some conditions to refresh changes;
       // but we can only rely on callback after refresh
-      ChangeListManager.getInstance(project).invokeAfterUpdate(
-        () -> {
-          try {
-            ChangesViewManager.getInstanceEx(project).refreshImmediately();
-            List<Change> actualChanges = loadFakeRevisions(project, changes);
-            resultRef.set(collectRequestProducers(project, actualChanges, unversioned, view));
-          }
-          catch (Throwable err) {
-            resultRef.setException(err);
-          }
-        },
-        InvokeAfterUpdateMode.SILENT,
-        ActionsBundle.actionText(IdeActions.ACTION_SHOW_DIFF_COMMON),
-        ModalityState.current());
+      ChangeListManager.getInstance(project).invokeAfterUpdate(true, () -> {
+        try {
+          ChangesViewManager.getInstanceEx(project).refreshImmediately();
+          List<Change> actualChanges = loadFakeRevisions(project, changes);
+          resultRef.set(collectRequestProducers(project, actualChanges, unversioned, view));
+        }
+        catch (Throwable err) {
+          resultRef.setException(err);
+        }
+      });
 
       chain = new ChangeDiffRequestChain.Async() {
         @Override
@@ -140,23 +141,26 @@ public class ShowDiffFromLocalChangesActionProvider implements AnActionExtension
   }
 
   @NotNull
-  private static ListSelection<Producer> collectRequestProducers(@NotNull Project project,
+  public static ListSelection<Producer> collectRequestProducers(@NotNull Project project,
                                                                  @NotNull List<? extends Change> changes,
                                                                  @NotNull List<? extends FilePath> unversioned,
                                                                  @NotNull ChangesListView changesView) {
     if (changes.size() == 1 && unversioned.isEmpty()) { // show all changes from this changelist
       Change selectedChange = changes.get(0);
-      List<Change> changelistChanges = changesView.getAllChangesFromSameChangelist(selectedChange);
-      if (changelistChanges != null) {
-        int selectedIndex = ContainerUtil.indexOf(changelistChanges, it -> ChangeListChange.HASHING_STRATEGY.equals(selectedChange, it));
-        if (selectedIndex == -1) selectedIndex = changelistChanges.indexOf(selectedChange);
-        return createChangeProducers(project, changelistChanges, selectedIndex);
+      List<Change> selectedChanges = changesView.getAllChangesFromSameChangelist(selectedChange);
+      if (selectedChanges == null) {
+        selectedChanges = changesView.getAllChangesFromSameAmendNode(selectedChange);
+      }
+      if (selectedChanges != null) {
+        int selectedIndex = ContainerUtil.indexOf(selectedChanges, it -> ChangeListChange.HASHING_STRATEGY.equals(selectedChange, it));
+        if (selectedIndex == -1) selectedIndex = selectedChanges.indexOf(selectedChange);
+        return createChangeProducers(project, selectedChanges, selectedIndex);
       }
     }
 
     if (unversioned.size() == 1 && changes.isEmpty()) { // show all unversioned changes
       FilePath selectedFile = unversioned.get(0);
-      List<FilePath> allUnversioned = changesView.getUnversionedFiles().collect(toList());
+      List<FilePath> allUnversioned = changesView.getUnversionedFiles().collect(Collectors.toList());
       int selectedIndex = allUnversioned.indexOf(selectedFile);
       return createUnversionedProducers(project, allUnversioned, selectedIndex);
     }
