@@ -1,8 +1,8 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.vcs.impl.projectlevelman;
 
 import com.intellij.ide.BrowserUtil;
-import com.intellij.ide.plugins.DisabledPluginsState;
+import com.intellij.ide.plugins.PluginEnabler;
 import com.intellij.ide.plugins.PluginManagerMain;
 import com.intellij.ide.plugins.PluginNode;
 import com.intellij.ide.plugins.marketplace.MarketplaceRequests;
@@ -20,6 +20,7 @@ import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.Task;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.updateSettings.impl.PluginDownloader;
+import com.intellij.openapi.util.NlsContexts;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vcs.AbstractVcs;
 import com.intellij.openapi.vcs.VcsBundle;
@@ -205,8 +206,19 @@ public final class AllVcses implements AllVcsesI, Disposable {
         result.add(vcsEP.createDescriptor());
       }
     }
-    Collections.sort(result);
+    result.sort(Comparator.comparing(VcsDescriptor::getName, String::compareTo));
     return result.toArray(new VcsDescriptor[0]);
+  }
+
+  @Override
+  public AbstractVcs[] getSupportedVcses() {
+    List<String> names;
+    synchronized (myLock) {
+      names = new ArrayList<>(myExtensions.keySet());
+    }
+    names.sort(String::compareTo);
+    return ContainerUtil.mapNotNull(names, this::getByName)
+      .toArray(new AbstractVcs[0]);
   }
 
   private class MyExtensionPointListener implements ExtensionPointListener<VcsEP> {
@@ -268,35 +280,32 @@ public final class AllVcses implements AllVcsesI, Disposable {
   }
 
   private void proposeToInstallPlugin(@NotNull ObsoleteVcs vcs) {
-    String message = "The " + vcs + " plugin was unbundled and needs to be installed manually";
-    Notification notification = IMPORTANT_ERROR_NOTIFICATION.createNotification("", message, NotificationType.WARNING, null);
-    notification
-      .addAction(NotificationAction.createSimple(VcsBundle.messagePointer("action.NotificationAction.AllVcses.text.install"), () -> {
-      notification.expire();
-      installPlugin(vcs);
-    }));
-    notification.addAction(NotificationAction.createSimple(VcsBundle.messagePointer("action.NotificationAction.AllVcses.text.read.more"), () -> {
-      BrowserUtil.browse("https://blog.jetbrains.com/idea/2019/02/unbundling-tfs-and-cvs-integration-plugins/");
-    }));
+    String message = VcsBundle.message("impl.notification.content.plugin.was.unbundled.needs.to.be.installed.manually", vcs);
+    Notification notification = IMPORTANT_ERROR_NOTIFICATION.createNotification(message, NotificationType.WARNING)
+      .setDisplayId("vcs.obsolete.plugin.unbundled")
+      .addAction(NotificationAction.createSimpleExpiring(VcsBundle.message("action.NotificationAction.AllVcses.text.install"), () -> installPlugin(vcs)))
+      .addAction(NotificationAction.createSimple(VcsBundle.message("action.NotificationAction.AllVcses.text.read.more"), () -> {
+        BrowserUtil.browse("https://blog.jetbrains.com/idea/2019/02/unbundling-tfs-and-cvs-integration-plugins/");
+      }));
     VcsNotifier.getInstance(myProject).notify(notification);
   }
 
   private void installPlugin(@NotNull ObsoleteVcs vcs) {
-    new Task.Backgroundable(myProject, "Installing Plugin") {
+    new Task.Backgroundable(myProject, VcsBundle.message("impl.progress.title.installing.plugin")) {
       @Override
       public void run(@NotNull ProgressIndicator indicator) {
         try {
-          PluginNode descriptor = MarketplaceRequests.getInstance().getLastCompatiblePluginUpdate(vcs.pluginId.getIdString(), null, indicator);
+          PluginNode descriptor = MarketplaceRequests.getInstance().getLastCompatiblePluginUpdate(vcs.pluginId, null, indicator);
           if (descriptor != null) {
             PluginDownloader downloader = PluginDownloader.createDownloader(descriptor);
             if (downloader.prepareToInstall(indicator)) {
               downloader.install();
-              DisabledPluginsState.enablePlugins(Collections.singletonList(descriptor), true);
+              PluginEnabler.HEADLESS.enablePlugins(List.of(descriptor));
               PluginManagerMain.notifyPluginsUpdated(myProject);
             }
           }
           else {
-            showErrorNotification(vcs, "Couldn't find the plugin " + vcs.pluginId);
+            showErrorNotification(vcs, VcsBundle.message("impl.notification.content.could.not.find.plugin", vcs.pluginId));
           }
         }
         catch (IOException e) {
@@ -305,13 +314,15 @@ public final class AllVcses implements AllVcsesI, Disposable {
         }
       }
 
-      private void showErrorNotification(@NotNull ObsoleteVcs vcs, @NotNull String message) {
-        String title = "Failed to Install Plugin";
-        Notification notification = IMPORTANT_ERROR_NOTIFICATION.createNotification(title, message, NotificationType.ERROR, null);
-        notification.addAction(
-          NotificationAction.createSimple(VcsBundle.messagePointer("action.NotificationAction.AllVcses.text.open.plugin.page"), () -> {
-          BrowserUtil.browse(vcs.pluginUrl);
-        }));
+      private void showErrorNotification(@NotNull ObsoleteVcs vcs, @NotNull @NlsContexts.NotificationContent String message) {
+        String title = VcsBundle.message("impl.notification.title.failed.to.install.plugin");
+        Notification notification = IMPORTANT_ERROR_NOTIFICATION
+          .createNotification(title, message, NotificationType.ERROR)
+          .setDisplayId("plugin.install.failed")
+          .addAction(
+            NotificationAction.createSimple(VcsBundle.messagePointer("action.NotificationAction.AllVcses.text.open.plugin.page"), () -> {
+              BrowserUtil.browse(vcs.pluginUrl);
+            }));
         VcsNotifier.getInstance(myProject).notify(notification);
       }
     }.queue();
