@@ -1,33 +1,18 @@
-/*
- * Copyright 2000-2015 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.lang.ant;
 
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.util.Pair;
 import com.intellij.util.ExceptionUtil;
-import com.intellij.util.ReflectionUtil;
 import org.jetbrains.annotations.Nullable;
 
 import java.lang.ref.SoftReference;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
-import java.util.Hashtable;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.locks.ReentrantLock;
 
 /**
@@ -36,7 +21,6 @@ import java.util.concurrent.locks.ReentrantLock;
 public final class ReflectedProject {
   private static final Logger LOG = Logger.getInstance(ReflectedProject.class);
 
-
   private static final List<SoftReference<Pair<ReflectedProject, ClassLoader>>> ourProjects =
     new ArrayList<>();
 
@@ -44,10 +28,10 @@ public final class ReflectedProject {
   public static final String ANT_PROJECT_CLASS = "org.apache.tools.ant.Project";
 
   private final Object myProject;
-  private Hashtable myTaskDefinitions;
-  private Hashtable myDataTypeDefinitions;
-  private Hashtable myProperties;
-  private Class myTargetClass;
+  private Map<String, Class<?>> myTaskDefinitions;
+  private Map<String, Class<?>> myDataTypeDefinitions;
+  private Map<String, String> myProperties;
+  private Class<?> myTargetClass;
 
   public static ReflectedProject getProject(final ClassLoader classLoader) {
     ourProjectsLock.lock();
@@ -84,17 +68,20 @@ public final class ReflectedProject {
   ReflectedProject(final ClassLoader classLoader) {
     Object project = null;
     try {
-      final Class projectClass = classLoader.loadClass(ANT_PROJECT_CLASS);
+      final Class<?> projectClass = classLoader.loadClass(ANT_PROJECT_CLASS);
       if (projectClass != null) {
-        project = projectClass.newInstance();
+        project = projectClass.getConstructor().newInstance();
         Method method = projectClass.getMethod("init");
         method.invoke(project);
-        method = ReflectionUtil.getMethod(projectClass, "getTaskDefinitions");
-        myTaskDefinitions = (Hashtable)method.invoke(project);
-        method = ReflectionUtil.getMethod(projectClass, "getDataTypeDefinitions");
-        myDataTypeDefinitions = (Hashtable)method.invoke(project);
-        method = ReflectionUtil.getMethod(projectClass, "getProperties");
-        myProperties = (Hashtable)method.invoke(project);
+        method = projectClass.getMethod("getTaskDefinitions");
+        //noinspection unchecked
+        myTaskDefinitions = (Map<String, Class<?>>)method.invoke(project);
+        method = projectClass.getMethod( "getDataTypeDefinitions");
+        //noinspection unchecked
+        myDataTypeDefinitions = (Map<String, Class<?>>)method.invoke(project);
+        method = projectClass.getMethod( "getProperties");
+        //noinspection unchecked
+        myProperties = (Map<String, String>)method.invoke(project);
         myTargetClass = classLoader.loadClass("org.apache.tools.ant.Target");
       }
     }
@@ -114,20 +101,20 @@ public final class ReflectedProject {
   }
 
   @Nullable
-  public Hashtable<String, Class> getTaskDefinitions() {
+  public Map<String, Class<?>> getTaskDefinitions() {
     return myTaskDefinitions;
   }
 
   @Nullable
-  public Hashtable<String, Class> getDataTypeDefinitions() {
+  public Map<String, Class<?>> getDataTypeDefinitions() {
     return myDataTypeDefinitions;
   }
 
-  public Hashtable getProperties() {
+  public Map<String, String> getProperties() {
     return myProperties;
   }
 
-  public Class getTargetClass() {
+  public Class<?> getTargetClass() {
     return myTargetClass;
   }
 
