@@ -9,6 +9,7 @@ import com.intellij.execution.process.CapturingProcessHandler;
 import com.intellij.execution.process.ProcessNotCreatedException;
 import com.intellij.execution.process.ProcessOutput;
 import com.intellij.execution.util.ExecUtil;
+import com.intellij.openapi.Disposable;
 import com.intellij.openapi.application.Application;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.diagnostic.Logger;
@@ -16,19 +17,21 @@ import com.intellij.openapi.module.Module;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.projectRoots.Sdk;
-import com.intellij.openapi.projectRoots.impl.ProjectJdkImpl;
 import com.intellij.openapi.roots.OrderRootType;
+import com.intellij.openapi.util.Disposer;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.openapi.vfs.LocalFileSystem;
 import com.intellij.openapi.vfs.VfsUtil;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.util.net.HttpConfigurable;
 import com.jetbrains.python.PyPsiPackageUtil;
+import com.jetbrains.python.PySdkBundle;
 import com.jetbrains.python.PythonHelpersLocator;
 import com.jetbrains.python.psi.LanguageLevel;
 import com.jetbrains.python.sdk.*;
 import com.jetbrains.python.sdk.flavors.PythonSdkFlavor;
+import org.jetbrains.annotations.Nls;
+import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -50,11 +53,11 @@ import static com.intellij.webcore.packaging.PackageVersionComparator.VERSION_CO
 public class PyPackageManagerImpl extends PyPackageManager {
 
   private static final String SETUPTOOLS_VERSION = "44.1.1";
-  private static final String PIP_VERSION = "20.1.1";
+  private static final String PIP_VERSION = "20.3.4";
 
   private static final String SETUPTOOLS_WHEEL_NAME = "setuptools-" + SETUPTOOLS_VERSION + "-py2.py3-none-any.whl";
   private static final String PIP_WHEEL_NAME = "pip-" + PIP_VERSION + "-py2.py3-none-any.whl";
-  private static final String VIRTUALENV_WHEEL_NAME = "virtualenv-16.7.10-py2.py3-none-any.whl";
+  private static final String VIRTUALENV_ZIPAPP_NAME = "virtualenv.pyz";
 
   private static final int ERROR_NO_SETUPTOOLS = 3;
 
@@ -62,8 +65,6 @@ public class PyPackageManagerImpl extends PyPackageManager {
 
   private static final String PACKAGING_TOOL = "packaging_tool.py";
   private static final int TIMEOUT = 10 * 60 * 1000;
-
-  private static final String BUILD_DIR_OPTION = "--build-dir";
 
   private static final String INSTALL = "install";
   private static final String UNINSTALL = "uninstall";
@@ -92,8 +93,8 @@ public class PyPackageManagerImpl extends PyPackageManager {
   public void installManagement() throws ExecutionException {
     final LanguageLevel languageLevel = PythonSdkType.getLanguageLevelForSdk(getSdk());
     if (languageLevel.isOlderThan(LanguageLevel.PYTHON27)) {
-      throw new ExecutionException("Package management for Python " + languageLevel + " is not supported. " +
-                                   "Upgrade your project interpreter to Python " + LanguageLevel.PYTHON27 + " or newer");
+      throw new ExecutionException(PySdkBundle.message("python.sdk.packaging.package.management.for.python.not.supported",
+                                                       languageLevel, LanguageLevel.PYTHON27));
     }
 
     boolean success = updatePackagingTools();
@@ -166,10 +167,12 @@ public class PyPackageManagerImpl extends PyPackageManager {
   protected PyPackageManagerImpl(@NotNull final Sdk sdk) {
     mySdk = sdk;
     subscribeToLocalChanges();
+    Disposable parentDisposable = sdk instanceof Disposable ? (Disposable)sdk : PyPackageManagers.getInstance();
+    Disposer.register(parentDisposable, this);
   }
 
   protected void subscribeToLocalChanges() {
-    PyPackageUtil.runOnChangeUnderInterpreterPaths(getSdk(), () -> PythonSdkType.getInstance().setupSdkPaths(getSdk()));
+    PyPackageUtil.runOnChangeUnderInterpreterPaths(getSdk(), this, () -> PythonSdkType.getInstance().setupSdkPaths(getSdk()));
   }
 
   @NotNull
@@ -184,22 +187,17 @@ public class PyPackageManagerImpl extends PyPackageManager {
 
   @Override
   public void install(@Nullable List<PyRequirement> requirements, @NotNull List<String> extraArgs) throws ExecutionException {
+    install(requirements, extraArgs, null);
+  }
+
+  public void install(@Nullable List<PyRequirement> requirements, @NotNull List<String> extraArgs, @Nullable String workingDir)
+    throws ExecutionException {
     if (requirements == null) return;
     if (!hasManagement()) {
       installManagement();
     }
     final List<String> args = new ArrayList<>();
     args.add(INSTALL);
-    final File buildDir;
-    try {
-      buildDir = FileUtil.createTempDirectory("pycharm-packaging", null);
-    }
-    catch (IOException e) {
-      throw new ExecutionException("Cannot create temporary build directory");
-    }
-    if (!extraArgs.contains(BUILD_DIR_OPTION)) {
-      args.addAll(Arrays.asList(BUILD_DIR_OPTION, buildDir.getAbsolutePath()));
-    }
 
     final boolean useUserSite = extraArgs.contains(USE_USER_SITE);
 
@@ -214,7 +212,7 @@ public class PyPackageManagerImpl extends PyPackageManager {
     }
 
     try {
-      getHelperResult(PACKAGING_TOOL, args, !useUserSite, true, null);
+      getHelperResult(args, !useUserSite, true, workingDir);
     }
     catch (PyExecutionException e) {
       final List<String> simplifiedArgs = new ArrayList<>();
@@ -233,7 +231,6 @@ public class PyPackageManagerImpl extends PyPackageManager {
     finally {
       LOG.debug("Packages cache is about to be refreshed because these requirements were installed: " + requirements);
       refreshPackagesSynchronously();
-      FileUtil.delete(buildDir);
     }
   }
 
@@ -252,7 +249,7 @@ public class PyPackageManagerImpl extends PyPackageManager {
         }
         args.add(pkg.getName());
       }
-      getHelperResult(PACKAGING_TOOL, args, !canModify, true, null);
+      getHelperResult(args, !canModify, true);
     }
     catch (PyExecutionException e) {
       throw new PyExecutionException(e.getMessage(), "pip", args, e.getStdout(), e.getStderr(), e.getExitCode(), e.getFixes());
@@ -271,26 +268,26 @@ public class PyPackageManagerImpl extends PyPackageManager {
     return packages != null ? Collections.unmodifiableList(packages) : null;
   }
 
-  @NotNull
-  protected List<PyPackage> collectPackages() throws ExecutionException {
-    if (mySdk instanceof PyLazySdk) return Collections.emptyList();
-    final String output;
+  protected @NotNull List<PyPackage> collectPackages() throws ExecutionException {
+    if (mySdk instanceof PyLazySdk) {
+      return List.of();
+    }
+
     try {
       LOG.debug("Collecting installed packages for the SDK " + mySdk.getName(), new Throwable());
-      output = getHelperResult(PACKAGING_TOOL, Collections.singletonList("list"), false, false, null);
+      String output = getHelperResult(List.of("list"), false, false);
+      return parsePackagingToolOutput(output);
     }
-    catch (final ProcessNotCreatedException ex) {
+    catch (ProcessNotCreatedException ex) {
       if (ApplicationManager.getApplication().isUnitTestMode()) {
         LOG.info("Not-env unit test mode, will return mock packages");
-        return Lists.newArrayList(new PyPackage(PyPackageUtil.PIP, PIP_VERSION, null, Collections.emptyList()),
-                                  new PyPackage(PyPackageUtil.SETUPTOOLS, SETUPTOOLS_VERSION, null, Collections.emptyList()));
+        return List.of(new PyPackage(PyPackageUtil.PIP, PIP_VERSION),
+                       new PyPackage(PyPackageUtil.SETUPTOOLS, SETUPTOOLS_VERSION));
       }
       else {
         throw ex;
       }
     }
-
-    return parsePackagingToolOutput(output);
   }
 
   @Override
@@ -317,63 +314,26 @@ public class PyPackageManagerImpl extends PyPackageManager {
     final LanguageLevel languageLevel = getOrRequestLanguageLevelForSdk(sdk);
 
     if (languageLevel.isOlderThan(LanguageLevel.PYTHON27)) {
-      throw new ExecutionException("Creating virtual environment for Python " + languageLevel + " is not supported. " +
-                                   "Upgrade your project interpreter to Python " + LanguageLevel.PYTHON27 + " or newer");
+      throw new ExecutionException(PySdkBundle.message("python.sdk.packaging.creating.virtual.environment.for.python.not.supported",
+                                                       languageLevel, LanguageLevel.PYTHON27));
     }
 
-    final boolean usePyVenv = languageLevel.isAtLeast(LanguageLevel.PYTHON33);
-    if (usePyVenv) {
-      args.add("pyvenv");
-      if (useGlobalSite) {
-        args.add("--system-site-packages");
-      }
-      args.add(destinationDir);
-      getHelperResult(PACKAGING_TOOL, args, false, true, null);
+    if (useGlobalSite) {
+      args.add("--system-site-packages");
     }
-    else {
-      if (useGlobalSite) {
-        args.add("--system-site-packages");
-      }
-      args.add(destinationDir);
-      createVirtualEnvForPython2UsingVirtualenvLibrary(args);
+    args.add(destinationDir);
+
+    try {
+      getPythonProcessResult(Objects.requireNonNull(getHelperPath(VIRTUALENV_ZIPAPP_NAME)), args, false, true, null, List.of("-S"));
+    }
+    catch (ExecutionException e) {
+      throw new ExecutionException(PySdkBundle.message("python.creating.venv.failed.sentence"), e);
     }
 
     final String binary = PythonSdkUtil.getPythonExecutable(destinationDir);
     final String binaryFallback = destinationDir + mySeparator + "bin" + mySeparator + "python";
-    final String path = (binary != null) ? binary : binaryFallback;
 
-    if (usePyVenv) {
-      // Still no 'packaging' and 'pysetup3' for Python 3.3rc1, see PEP 405
-      final VirtualFile binaryFile = LocalFileSystem.getInstance().refreshAndFindFileByPath(path);
-      if (binaryFile != null) {
-        final ProjectJdkImpl tmpSdk = new ProjectJdkImpl("", PythonSdkType.getInstance());
-        tmpSdk.setHomePath(path);
-        // Don't save such one-shot SDK with empty name in the cache of PyPackageManagers
-        final PyPackageManager manager = new PyPackageManagerImpl(tmpSdk);
-        manager.installManagement();
-      }
-    }
-    return path;
-  }
-
-  private void createVirtualEnvForPython2UsingVirtualenvLibrary(List<String> args) throws ExecutionException {
-    File workingDirectory = null;
-    try {
-      workingDirectory = FileUtil.createTempDirectory("tmp", "pycharm-management");
-      final String workingDirectoryPath = workingDirectory.getPath();
-      getPythonProcessResult("-mzipfile", Arrays.asList("-e", getHelperPath(VIRTUALENV_WHEEL_NAME), workingDirectoryPath),
-                             false, true, workingDirectoryPath);
-      getPythonProcessResult(workingDirectoryPath + "/virtualenv.py", args,
-                             false, true, workingDirectoryPath);
-    }
-    catch (IOException e) {
-      throw new ExecutionException("Cannot create temporary build directory", e);
-    }
-    finally {
-      if (workingDirectory != null) {
-        FileUtil.delete(workingDirectory);
-      }
-    }
+    return (binary != null) ? binary : binaryFallback;
   }
 
   @NotNull
@@ -383,7 +343,7 @@ public class PyPackageManagerImpl extends PyPackageManager {
       if (flavor != null && sdk.getHomePath() != null) {
         return flavor.getLanguageLevel(sdk.getHomePath());
       }
-      throw new ExecutionException("Cannot retrieve the version of the detected SDK: " + sdk.getHomePath());
+      throw new ExecutionException(PySdkBundle.message("python.sdk.packaging.cannot.retrieve.version", sdk.getHomePath()));
     }
     // Use the cached version for an already configured SDK
     return PythonSdkType.getLanguageLevelForSdk(sdk);
@@ -458,12 +418,19 @@ public class PyPackageManagerImpl extends PyPackageManager {
     return null;
   }
 
-  @NotNull
-  private String getHelperResult(@NotNull String helper, @NotNull List<String> args, boolean askForSudo,
-                                 boolean showProgress, @Nullable String parentDir) throws ExecutionException {
-    final String helperPath = getHelperPath(helper);
+  private @NotNull String getHelperResult(@NotNull List<String> args,
+                                          boolean askForSudo,
+                                          boolean showProgress) throws ExecutionException {
+    return getHelperResult(args, askForSudo, showProgress, null);
+  }
+
+  private @NotNull String getHelperResult(@NotNull List<String> args,
+                                          boolean askForSudo,
+                                          boolean showProgress,
+                                          @Nullable String parentDir) throws ExecutionException {
+    String helperPath = getHelperPath(PACKAGING_TOOL);
     if (helperPath == null) {
-      throw new ExecutionException("Cannot find external tool: " + helper);
+      throw new ExecutionException(PySdkBundle.message("python.sdk.packaging.cannot.find.external.tool", PACKAGING_TOOL));
     }
     return getPythonProcessResult(helperPath, args, askForSudo, showProgress, parentDir);
   }
@@ -476,13 +443,20 @@ public class PyPackageManagerImpl extends PyPackageManager {
   @NotNull
   private String getPythonProcessResult(@NotNull String path, @NotNull List<String> args, boolean askForSudo,
                                         boolean showProgress, @Nullable String workingDir) throws ExecutionException {
-    final ProcessOutput output = getPythonProcessOutput(path, args, askForSudo, showProgress, workingDir);
+    return getPythonProcessResult(path, args, askForSudo, showProgress, workingDir, null);
+  }
+
+  @NotNull
+  private String getPythonProcessResult(@NotNull String path, @NotNull List<String> args, boolean askForSudo,
+                                        boolean showProgress, @Nullable String workingDir, @Nullable List<String> pyArgs)
+    throws ExecutionException {
+    final ProcessOutput output = getPythonProcessOutput(path, args, askForSudo, showProgress, workingDir, pyArgs);
     final int exitCode = output.getExitCode();
     if (output.isTimeout()) {
-      throw new PyExecutionException("Timed out", path, args, output);
+      throw new PyExecutionException(PySdkBundle.message("python.sdk.packaging.timed.out"), path, args, output);
     }
     else if (exitCode != 0) {
-      throw new PyExecutionException("Non-zero exit code (" + exitCode + ")", path, args, output);
+      throw new PyExecutionException(PySdkBundle.message("python.sdk.packaging.non.zero.exit.code", exitCode), path, args, output);
     }
     return output.getStdout();
   }
@@ -490,15 +464,23 @@ public class PyPackageManagerImpl extends PyPackageManager {
   @NotNull
   protected ProcessOutput getPythonProcessOutput(@NotNull String helperPath, @NotNull List<String> args, boolean askForSudo,
                                                  boolean showProgress, @Nullable String workingDir) throws ExecutionException {
+    return getPythonProcessOutput(helperPath, args, askForSudo, showProgress, workingDir, null);
+  }
+
+  @NotNull
+  protected ProcessOutput getPythonProcessOutput(@NotNull String helperPath, @NotNull List<String> args, boolean askForSudo,
+                                                 boolean showProgress, @Nullable String workingDir, @Nullable List<String> pyArgs)
+    throws ExecutionException {
     final String homePath = getSdk().getHomePath();
     if (homePath == null) {
-      throw new ExecutionException("Cannot find Python interpreter for SDK " + mySdk.getName());
+      throw new ExecutionException(PySdkBundle.message("python.sdk.packaging.cannot.find.python.interpreter", mySdk.getName()));
     }
     if (workingDir == null) {
       workingDir = new File(homePath).getParent();
     }
     final List<String> cmdline = new ArrayList<>();
     cmdline.add(homePath);
+    if (pyArgs != null) cmdline.addAll(pyArgs);
     cmdline.add(helperPath);
     cmdline.addAll(args);
     LOG.info("Running packaging tool: " + StringUtil.join(makeSafeToDisplayCommand(cmdline), " "));
@@ -517,7 +499,7 @@ public class PyPackageManagerImpl extends PyPackageManager {
       final Process process;
       final boolean useSudo = askForSudo && PySdkExtKt.adminPermissionsNeeded(mySdk);
       if (useSudo) {
-        process = ExecUtil.sudo(commandLine, "Please enter your password to make changes in system packages: ");
+        process = ExecUtil.sudo(commandLine, PySdkBundle.message("python.sdk.packaging.enter.your.password.to.make.changes"));
       }
       else {
         process = commandLine.createProcess();
@@ -539,8 +521,9 @@ public class PyPackageManagerImpl extends PyPackageManager {
       result.checkSuccess(LOG);
       final int exitCode = result.getExitCode();
       if (exitCode != 0) {
-        final String message = StringUtil.isEmptyOrSpaces(result.getStdout()) && StringUtil.isEmptyOrSpaces(result.getStderr()) ?
-                               "Permission denied" : "Non-zero exit code (" + exitCode + ")";
+        final String message = StringUtil.isEmptyOrSpaces(result.getStdout()) && StringUtil.isEmptyOrSpaces(result.getStderr())
+                               ? PySdkBundle.message("python.conda.permission.denied")
+                               : PySdkBundle.message("python.sdk.packaging.non.zero.exit.code", exitCode);
         throw new PyExecutionException(message, helperPath, args, result);
       }
       return result;
@@ -582,28 +565,48 @@ public class PyPackageManagerImpl extends PyPackageManager {
     return proxyArgument;
   }
 
-  @NotNull
-  private List<PyPackage> parsePackagingToolOutput(@NotNull String s) throws ExecutionException {
-    final String[] lines = StringUtil.splitByLines(s);
-    final List<PyPackage> packages = new ArrayList<>();
-    for (String line : lines) {
-      final List<String> fields = StringUtil.split(line, "\t");
-      if (fields.size() < 3) {
-        throw new PyExecutionException("Invalid output format", PACKAGING_TOOL, Collections.emptyList());
-      }
-      final String name = fields.get(0);
-      final String version = fields.get(1);
-      final String location = fields.get(2);
-      final List<PyRequirement> requirements = new ArrayList<>();
-      if (fields.size() >= 4) {
-        final String requiresLine = fields.get(3);
-        final String requiresSpec = StringUtil.join(StringUtil.split(requiresLine, ":"), "\n");
-        requirements.addAll(parseRequirements(requiresSpec));
-      }
-      if (!"Python".equals(name)) {
-        packages.add(new PyPackage(name, version, location, requirements));
+  private @NotNull List<PyPackage> parsePackagingToolOutput(@NotNull String output) throws PyExecutionException {
+    List<PyPackage> packages = new ArrayList<>();
+    for (String line : StringUtil.splitByLines(output)) {
+      PyPackage pkg = parsePackaging(line,
+                                     "\t",
+                                     true,
+                                     PySdkBundle.message("python.sdk.packaging.invalid.output.format"),
+                                     PACKAGING_TOOL);
+
+      if (pkg != null) {
+        packages.add(pkg);
       }
     }
     return packages;
+  }
+
+  protected final @Nullable PyPackage parsePackaging(@NotNull @NonNls String line,
+                                                     @NotNull @NonNls String separator,
+                                                     boolean useLocation,
+                                                     @NotNull @Nls String errorMessage,
+                                                     @NotNull @NonNls String command) throws PyExecutionException {
+    List<String> fields = StringUtil.split(line, separator);
+    if (fields.size() < 3) {
+      throw new PyExecutionException(errorMessage, command, List.of());
+    }
+
+    final String name = fields.get(0);
+
+    // TODO does it has to be parsed regardless the name?
+    List<PyRequirement> requirements = fields.size() >= 4 ?
+                                       parseRequirements(toMultilineString(fields.get(3))) :
+                                       List.of();
+
+    return "Python".equals(name) ?
+           null :
+           new PyPackage(name,
+                         fields.get(1),
+                         useLocation ? fields.get(2) : "",
+                         requirements);
+  }
+
+  private static @NotNull String toMultilineString(@NotNull String string) {
+    return StringUtil.join(StringUtil.split(string, ":"), "\n");
   }
 }
